@@ -20,7 +20,6 @@ package org.apache.kafka.connect.mirror;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -33,20 +32,22 @@ public class ReplicationPolicyTest {
 
     @BeforeEach
     public void setUp() {
-        DEFAULT_REPLICATION_POLICY.configure(Collections.emptyMap());
+        DEFAULT_REPLICATION_POLICY.configure(Map.of());
     }
 
     @Test
     public void testInternalTopic() {
+        Map<String, Object> config =  new HashMap<>();
+        config.put(MirrorClientConfig.REPLICATION_POLICY_SEPARATOR, ".");
+        DEFAULT_REPLICATION_POLICY.configure(config);
+
         // starts with '__'
         assertTrue(DEFAULT_REPLICATION_POLICY.isInternalTopic("__consumer_offsets"));
         // starts with '.'
         assertTrue(DEFAULT_REPLICATION_POLICY.isInternalTopic(".hiddentopic"));
 
-        // ends with '.internal': default DistributedConfig.OFFSET_STORAGE_TOPIC_CONFIG in standalone mode.
+        // starts with 'mm2' and ends with '.internal': default DistributedConfig.OFFSET_STORAGE_TOPIC_CONFIG in standalone mode.
         assertTrue(DEFAULT_REPLICATION_POLICY.isInternalTopic("mm2-offsets.CLUSTER.internal"));
-        // ends with '-internal'
-        assertTrue(DEFAULT_REPLICATION_POLICY.isInternalTopic("mm2-offsets-CLUSTER-internal"));
         // non-internal topic.
         assertFalse(DEFAULT_REPLICATION_POLICY.isInternalTopic("mm2-offsets_CLUSTER_internal"));
     }
