@@ -29,23 +29,26 @@ import org.apache.kafka.common.TopicPartitionInfo;
 import org.apache.kafka.common.errors.TopicAuthorizationException;
 import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.header.internals.RecordHeaders;
+import org.apache.kafka.common.internals.Plugin;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.data.SchemaAndValue;
 import org.apache.kafka.connect.errors.ConnectException;
 import org.apache.kafka.connect.errors.RetriableException;
 import org.apache.kafka.connect.header.ConnectHeaders;
-import org.apache.kafka.connect.integration.MonitorableSourceConnector;
+import org.apache.kafka.connect.integration.TestableSourceConnector;
 import org.apache.kafka.connect.runtime.errors.ErrorHandlingMetrics;
 import org.apache.kafka.connect.runtime.errors.ErrorReporter;
 import org.apache.kafka.connect.runtime.errors.ProcessingContext;
 import org.apache.kafka.connect.runtime.errors.RetryWithToleranceOperator;
 import org.apache.kafka.connect.runtime.errors.RetryWithToleranceOperatorTest;
 import org.apache.kafka.connect.runtime.isolation.Plugins;
+import org.apache.kafka.connect.runtime.isolation.TestPlugins;
 import org.apache.kafka.connect.runtime.standalone.StandaloneConfig;
 import org.apache.kafka.connect.source.SourceRecord;
 import org.apache.kafka.connect.source.SourceTask;
 import org.apache.kafka.connect.storage.CloseableOffsetStorageReader;
+import org.apache.kafka.connect.storage.ClusterConfigState;
 import org.apache.kafka.connect.storage.ConnectorOffsetBackingStore;
 import org.apache.kafka.connect.storage.Converter;
 import org.apache.kafka.connect.storage.HeaderConverter;
@@ -70,8 +73,6 @@ import org.mockito.stubbing.Answer;
 
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -80,8 +81,9 @@ import java.util.Set;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static org.apache.kafka.connect.integration.MonitorableSourceConnector.TOPIC_CONFIG;
+import static org.apache.kafka.connect.integration.TestableSourceConnector.TOPIC_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.CONNECTOR_CLASS_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.KEY_CONVERTER_CLASS_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.TASKS_MAX_CONFIG;
@@ -117,8 +119,8 @@ public class AbstractWorkerSourceTaskTest {
 
     private static final String TOPIC = "topic";
     private static final String OTHER_TOPIC = "other-topic";
-    private static final Map<String, byte[]> PARTITION = Collections.singletonMap("key", "partition".getBytes());
-    private static final Map<String, Integer> OFFSET = Collections.singletonMap("key", 12);
+    private static final Map<String, byte[]> PARTITION = Map.of("key", "partition".getBytes());
+    private static final Map<String, Integer> OFFSET = Map.of("key", 12);
 
     // Connect-format data
     private static final Schema KEY_SCHEMA = Schema.INT32_SCHEMA;
@@ -130,8 +132,7 @@ public class AbstractWorkerSourceTaskTest {
     private static final byte[] SERIALIZED_KEY = "converted-key".getBytes();
     private static final byte[] SERIALIZED_RECORD = "converted-record".getBytes();
 
-    @Mock
-    private SourceTask sourceTask;
+    @Mock private SourceTask sourceTask;
     @Mock private TopicAdmin admin;
     @Mock private KafkaProducer<byte[], byte[]> producer;
     @Mock private Converter keyConverter;
@@ -142,8 +143,9 @@ public class AbstractWorkerSourceTaskTest {
     @Mock private OffsetStorageWriter offsetWriter;
     @Mock private ConnectorOffsetBackingStore offsetStore;
     @Mock private StatusBackingStore statusBackingStore;
-    @Mock private WorkerSourceTaskContext sourceTaskContext;
+    @Mock private WorkerTransactionContext workerTransactionContext;
     @Mock private TaskStatus.Listener statusListener;
+    @Mock private ClusterConfigState configState;
 
     private final ConnectorTaskId taskId = new ConnectorTaskId("job", 0);
     private final ConnectorTaskId taskId1 = new ConnectorTaskId("job", 1);
@@ -167,6 +169,7 @@ public class AbstractWorkerSourceTaskTest {
 
     private Map<String, String> workerProps() {
         Map<String, String> props = new HashMap<>();
+        props.put(WorkerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
         props.put("key.converter", "org.apache.kafka.connect.json.JsonConverter");
         props.put("value.converter", "org.apache.kafka.connect.json.JsonConverter");
         props.put("offset.storage.file.filename", "/tmp/connect.offsets");
@@ -178,7 +181,7 @@ public class AbstractWorkerSourceTaskTest {
         // setup up props for the source connector
         Map<String, String> props = new HashMap<>();
         props.put("name", "foo-connector");
-        props.put(CONNECTOR_CLASS_CONFIG, MonitorableSourceConnector.class.getSimpleName());
+        props.put(CONNECTOR_CLASS_CONFIG, TestableSourceConnector.class.getSimpleName());
         props.put(TASKS_MAX_CONFIG, String.valueOf(1));
         props.put(TOPIC_CONFIG, TOPIC);
         props.put(KEY_CONVERTER_CLASS_CONFIG, StringConverter.class.getName());
@@ -249,7 +252,7 @@ public class AbstractWorkerSourceTaskTest {
         createWorkerTask();
 
         // Can just use the same record for key and value
-        List<SourceRecord> records = Collections.singletonList(
+        List<SourceRecord> records = List.of(
             new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD)
         );
 
@@ -264,7 +267,7 @@ public class AbstractWorkerSourceTaskTest {
 
         assertArrayEquals(SERIALIZED_KEY, sent.getValue().key());
         assertArrayEquals(SERIALIZED_RECORD, sent.getValue().value());
-        
+
         verifyTaskGetTopic();
         verifyTopicCreation();
     }
@@ -278,7 +281,7 @@ public class AbstractWorkerSourceTaskTest {
         expectApplyTransformationChain();
         expectTopicCreation(TOPIC);
 
-        workerTask.toSend = Collections.singletonList(
+        workerTask.toSend = List.of(
                 new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD, timestamp)
         );
         workerTask.sendRecords();
@@ -298,7 +301,7 @@ public class AbstractWorkerSourceTaskTest {
         expectConvertHeadersAndKeyValue(emptyHeaders(), TOPIC);
         expectApplyTransformationChain();
 
-        workerTask.toSend = Collections.singletonList(
+        workerTask.toSend = List.of(
                 new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD, timestamp)
         );
         assertThrows(InvalidRecordException.class, workerTask::sendRecords);
@@ -315,7 +318,7 @@ public class AbstractWorkerSourceTaskTest {
         expectApplyTransformationChain();
         expectTopicCreation(TOPIC);
 
-        workerTask.toSend = Collections.singletonList(
+        workerTask.toSend = List.of(
                 new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD, timestamp)
         );
         workerTask.sendRecords();
@@ -341,7 +344,7 @@ public class AbstractWorkerSourceTaskTest {
         expectApplyTransformationChain();
         expectTopicCreation(TOPIC);
 
-        workerTask.toSend = Collections.singletonList(
+        workerTask.toSend = List.of(
             new SourceRecord(PARTITION, OFFSET, TOPIC, null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD,
                 null, connectHeaders)
         );
@@ -362,8 +365,8 @@ public class AbstractWorkerSourceTaskTest {
         StringConverter stringConverter = new StringConverter();
         SampleConverterWithHeaders testConverter = new SampleConverterWithHeaders();
 
-        createWorkerTask(stringConverter, testConverter, stringConverter, RetryWithToleranceOperatorTest.noopOperator(),
-                Collections::emptyList);
+        createWorkerTask(stringConverter, testConverter, stringConverter, RetryWithToleranceOperatorTest.noneOperator(),
+                List::of, transformationChain);
 
         expectSendRecord(null);
         expectApplyTransformationChain();
@@ -379,7 +382,7 @@ public class AbstractWorkerSourceTaskTest {
         org.apache.kafka.connect.header.Headers headersB = new ConnectHeaders()
             .addString("encoding", encodingB);
 
-        workerTask.toSend = Arrays.asList(
+        workerTask.toSend = List.of(
             new SourceRecord(PARTITION, OFFSET, "topic", null, Schema.STRING_SCHEMA, "a",
                 Schema.STRING_SCHEMA, stringA, null, headersA),
             new SourceRecord(PARTITION, OFFSET, "topic", null, Schema.STRING_SCHEMA, "b",
@@ -422,13 +425,13 @@ public class AbstractWorkerSourceTaskTest {
 
         expectPreliminaryCalls(TOPIC);
 
-        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, Collections.emptyList(), Collections.emptyList());
-        TopicDescription topicDesc = new TopicDescription(TOPIC, false, Collections.singletonList(topicPartitionInfo));
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.singletonMap(TOPIC, topicDesc));
+        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, List.of(), List.of());
+        TopicDescription topicDesc = new TopicDescription(TOPIC, false, List.of(topicPartitionInfo));
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of(TOPIC, topicDesc));
 
         expectSendRecord(emptyHeaders());
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
 
         verifySendRecord(2);
@@ -448,11 +451,11 @@ public class AbstractWorkerSourceTaskTest {
 
         when(admin.describeTopics(TOPIC))
                 .thenThrow(new RetriableException(new TimeoutException("timeout")))
-                .thenReturn(Collections.emptyMap());
+                .thenReturn(Map.of());
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
-        assertEquals(Arrays.asList(record1, record2), workerTask.toSend);
+        assertEquals(List.of(record1, record2), workerTask.toSend);
         verify(admin, never()).createOrFindTopics(any(NewTopic.class));
         verifyNoMoreInteractions(admin);
 
@@ -473,16 +476,16 @@ public class AbstractWorkerSourceTaskTest {
 
         expectPreliminaryCalls(TOPIC);
 
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class)))
                 // First call to create the topic times out
                 .thenThrow(new RetriableException(new TimeoutException("timeout")))
                 // Next attempt succeeds
                 .thenReturn(createdTopic(TOPIC));
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
-        assertEquals(Arrays.asList(record1, record2), workerTask.toSend);
+        assertEquals(List.of(record1, record2), workerTask.toSend);
 
         // Next they all succeed
         workerTask.sendRecords();
@@ -505,9 +508,9 @@ public class AbstractWorkerSourceTaskTest {
         expectPreliminaryCalls(OTHER_TOPIC);
 
         when(admin.describeTopics(anyString()))
-                .thenReturn(Collections.emptyMap())
+                .thenReturn(Map.of())
                 .thenThrow(new RetriableException(new TimeoutException("timeout")))
-                .thenReturn(Collections.emptyMap());
+                .thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class))).thenAnswer(
             (Answer<TopicAdmin.TopicCreationResponse>) invocation -> {
                 NewTopic newTopic = invocation.getArgument(0);
@@ -515,9 +518,9 @@ public class AbstractWorkerSourceTaskTest {
             });
 
         // Try to send 3, make first pass, second fail. Should save last record
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
         workerTask.sendRecords();
-        assertEquals(Collections.singletonList(record3), workerTask.toSend);
+        assertEquals(List.of(record3), workerTask.toSend);
 
         // Next they all succeed
         workerTask.sendRecords();
@@ -528,10 +531,10 @@ public class AbstractWorkerSourceTaskTest {
         ArgumentCaptor<NewTopic> newTopicCaptor = ArgumentCaptor.forClass(NewTopic.class);
         verify(admin, times(2)).createOrFindTopics(newTopicCaptor.capture());
 
-        assertEquals(Arrays.asList(TOPIC, OTHER_TOPIC), newTopicCaptor.getAllValues()
+        assertEquals(List.of(TOPIC, OTHER_TOPIC), newTopicCaptor.getAllValues()
             .stream()
             .map(NewTopic::name)
-            .collect(Collectors.toList()));
+            .toList());
     }
 
     @Test
@@ -546,16 +549,16 @@ public class AbstractWorkerSourceTaskTest {
         expectPreliminaryCalls(TOPIC);
         expectPreliminaryCalls(OTHER_TOPIC);
 
-        when(admin.describeTopics(anyString())).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(anyString())).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class)))
                 .thenReturn(createdTopic(TOPIC))
                 .thenThrow(new RetriableException(new TimeoutException("timeout")))
                 .thenReturn(createdTopic(OTHER_TOPIC));
 
         // Try to send 3, make first pass, second fail. Should save last record
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
         workerTask.sendRecords();
-        assertEquals(Collections.singletonList(record3), workerTask.toSend);
+        assertEquals(List.of(record3), workerTask.toSend);
         verifyTopicCreation(2,  TOPIC, OTHER_TOPIC); // Second call to createOrFindTopics will throw
 
         // Next they all succeed
@@ -577,7 +580,7 @@ public class AbstractWorkerSourceTaskTest {
             new ConnectException(new TopicAuthorizationException("unauthorized"))
         );
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, workerTask::sendRecords);
     }
 
@@ -589,12 +592,12 @@ public class AbstractWorkerSourceTaskTest {
         SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
 
         expectPreliminaryCalls(TOPIC);
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class))).thenThrow(
             new ConnectException(new TopicAuthorizationException("unauthorized"))
         );
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, workerTask::sendRecords);
         verify(admin).createOrFindTopics(any());
 
@@ -610,10 +613,10 @@ public class AbstractWorkerSourceTaskTest {
 
         expectPreliminaryCalls(TOPIC);
 
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class))).thenReturn(TopicAdmin.EMPTY_CREATION);
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, workerTask::sendRecords);
         verify(admin).createOrFindTopics(any());
 
@@ -630,10 +633,10 @@ public class AbstractWorkerSourceTaskTest {
         expectSendRecord(emptyHeaders());
         expectApplyTransformationChain();
 
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class))).thenReturn(foundTopic(TOPIC));
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
 
         ArgumentCaptor<ProducerRecord<byte[], byte[]>> sent = verifySendRecord(2);
@@ -655,10 +658,10 @@ public class AbstractWorkerSourceTaskTest {
         expectSendRecord(emptyHeaders());
         expectApplyTransformationChain();
 
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.emptyMap());
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of());
         when(admin.createOrFindTopics(any(NewTopic.class))).thenReturn(createdTopic(TOPIC));
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
 
         ArgumentCaptor<ProducerRecord<byte[], byte[]>> sent = verifySendRecord(2);
@@ -684,13 +687,13 @@ public class AbstractWorkerSourceTaskTest {
         when(transformationChain.apply(any(), eq(record2))).thenReturn(null);
         when(transformationChain.apply(any(), eq(record3))).thenReturn(record3);
 
-        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, Collections.emptyList(), Collections.emptyList());
-        TopicDescription topicDesc = new TopicDescription(TOPIC, false, Collections.singletonList(topicPartitionInfo));
-        when(admin.describeTopics(TOPIC)).thenReturn(Collections.singletonMap(TOPIC, topicDesc));
+        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, List.of(), List.of());
+        TopicDescription topicDesc = new TopicDescription(TOPIC, false, List.of(topicPartitionInfo));
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of(TOPIC, topicDesc));
 
         when(producer.send(any(), any())).thenThrow(new RetriableException("Retriable exception")).thenReturn(null);
 
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
 
         // The first two records are filtered out / dropped by the transformation chain; only the third record will be attempted to be sent.
         // The producer throws a RetriableException the first time we try to send the third record
@@ -704,6 +707,115 @@ public class AbstractWorkerSourceTaskTest {
         verify(transformationChain, times(1)).apply(any(), eq(record1));
         verify(transformationChain, times(1)).apply(any(), eq(record2));
         verify(transformationChain, times(2)).apply(any(), eq(record3));
+    }
+
+    @Test
+    public void testSendRecordsFailedTransformationErrorToleranceNone() {
+        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+
+        RetryWithToleranceOperator<RetriableException> retryWithToleranceOperator = RetryWithToleranceOperatorTest.noneOperator();
+        TransformationChain<RetriableException, SourceRecord> transformationChainRetriableException =
+                WorkerTestUtils.getTransformationChain(retryWithToleranceOperator, List.of(new RetriableException("Test"), record1));
+        createWorkerTask(transformationChainRetriableException, retryWithToleranceOperator);
+
+        expectConvertHeadersAndKeyValue(emptyHeaders(), TOPIC);
+
+        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, List.of(), List.of());
+        TopicDescription topicDesc = new TopicDescription(TOPIC, false, List.of(topicPartitionInfo));
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of(TOPIC, topicDesc));
+
+        workerTask.toSend = List.of(record1);
+
+        // The transformation errored out so the error should be re-raised by sendRecords with error tolerance None
+        Exception exception = assertThrows(ConnectException.class, workerTask::sendRecords);
+        assertTrue(exception.getMessage().contains("Tolerance exceeded"));
+
+        // Ensure the transformation was called
+        verify(transformationChainRetriableException, times(1)).apply(any(), eq(record1));
+
+        // The second transform call will succeed, batch should succeed at sending the one record (none were skipped)
+        assertTrue(workerTask.sendRecords());
+        verifySendRecord(1);
+    }
+
+    @Test
+    public void testSendRecordsFailedTransformationErrorToleranceAll() {
+        RetryWithToleranceOperator<RetriableException> retryWithToleranceOperator = RetryWithToleranceOperatorTest.allOperator();
+        TransformationChain<RetriableException, SourceRecord> transformationChainRetriableException = WorkerTestUtils.getTransformationChain(
+                retryWithToleranceOperator,
+                List.of(new RetriableException("Test")));
+
+        createWorkerTask(transformationChainRetriableException, retryWithToleranceOperator);
+
+        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+
+        expectConvertHeadersAndKeyValue(emptyHeaders(), TOPIC);
+
+        workerTask.toSend = List.of(record1);
+
+        // The transformation errored out so the error should be ignored & the record skipped with error tolerance all
+        assertTrue(workerTask.sendRecords());
+
+        // Ensure the transformation was called
+        verify(transformationChainRetriableException, times(1)).apply(any(), eq(record1));
+    }
+
+    @Test
+    public void testSendRecordsConversionExceptionErrorToleranceNone() {
+        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record3 = new SourceRecord(PARTITION, OFFSET, TOPIC, 3, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+
+        RetryWithToleranceOperator<RetriableException> retryWithToleranceOperator = RetryWithToleranceOperatorTest.noneOperator();
+        List<Object> results = Stream.of(record1, record2, record3)
+                .collect(Collectors.toList());
+        TransformationChain<RetriableException, SourceRecord> chain = WorkerTestUtils.getTransformationChain(
+                retryWithToleranceOperator,
+                results);
+        createWorkerTask(chain, retryWithToleranceOperator);
+
+        // When we try to convert the key/value of each record, throw an exception
+        throwExceptionWhenConvertKey(emptyHeaders(), TOPIC);
+
+        TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, null, List.of(), List.of());
+        TopicDescription topicDesc = new TopicDescription(TOPIC, false, List.of(topicPartitionInfo));
+        when(admin.describeTopics(TOPIC)).thenReturn(Map.of(TOPIC, topicDesc));
+
+        workerTask.toSend = List.of(record1, record2, record3);
+
+        // Send records should fail when errors.tolerance is none and the conversion call fails
+        Exception exception = assertThrows(ConnectException.class, workerTask::sendRecords);
+        assertTrue(exception.getMessage().contains("Tolerance exceeded"));
+        assertThrows(ConnectException.class, workerTask::sendRecords);
+        assertThrows(ConnectException.class, workerTask::sendRecords);
+
+        // Set the conversion call to succeed, batch should succeed at sending all three records (none were skipped)
+        expectConvertHeadersAndKeyValue(emptyHeaders(), TOPIC);
+        assertTrue(workerTask.sendRecords());
+        verifySendRecord(3);
+    }
+
+    @Test
+    public void testSendRecordsConversionExceptionErrorToleranceAll() {
+        SourceRecord record1 = new SourceRecord(PARTITION, OFFSET, TOPIC, 1, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record2 = new SourceRecord(PARTITION, OFFSET, TOPIC, 2, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+        SourceRecord record3 = new SourceRecord(PARTITION, OFFSET, TOPIC, 3, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD);
+
+        RetryWithToleranceOperator<RetriableException> retryWithToleranceOperator = RetryWithToleranceOperatorTest.allOperator();
+        List<Object> results = Stream.of(record1, record2, record3)
+                .collect(Collectors.toList());
+        TransformationChain<RetriableException, SourceRecord> chain = WorkerTestUtils.getTransformationChain(
+                retryWithToleranceOperator,
+                results);
+        createWorkerTask(chain, retryWithToleranceOperator);
+
+        // When we try to convert the key/value of each record, throw an exception
+        throwExceptionWhenConvertKey(emptyHeaders(), TOPIC);
+
+        workerTask.toSend = List.of(record1, record2, record3);
+
+        // With errors.tolerance to all, the failed conversion should simply skip the record, and record successful batch
+        assertTrue(workerTask.sendRecords());
     }
 
     private void expectSendRecord(Headers headers) {
@@ -770,15 +882,15 @@ public class AbstractWorkerSourceTaskTest {
 
     @SuppressWarnings("SameParameterValue")
     private TopicAdmin.TopicCreationResponse createdTopic(String topic) {
-        Set<String> created = Collections.singleton(topic);
-        Set<String> existing = Collections.emptySet();
+        Set<String> created = Set.of(topic);
+        Set<String> existing = Set.of();
         return new TopicAdmin.TopicCreationResponse(created, existing);
     }
 
     @SuppressWarnings("SameParameterValue")
     private TopicAdmin.TopicCreationResponse foundTopic(String topic) {
-        Set<String> created = Collections.emptySet();
-        Set<String> existing = Collections.singleton(topic);
+        Set<String> created = Set.of();
+        Set<String> existing = Set.of(topic);
         return new TopicAdmin.TopicCreationResponse(created, existing);
     }
 
@@ -802,8 +914,22 @@ public class AbstractWorkerSourceTaskTest {
         when(valueConverter.fromConnectData(eq(topic), any(Headers.class), eq(RECORD_SCHEMA),
                 eq(RECORD)))
                 .thenReturn(SERIALIZED_RECORD);
-        assertEquals(keyConverter.fromConnectData(topic, headers, KEY_SCHEMA, KEY), SERIALIZED_KEY);
-        assertEquals(valueConverter.fromConnectData(topic, headers, RECORD_SCHEMA, RECORD), SERIALIZED_RECORD);
+        assertEquals(SERIALIZED_KEY, keyConverter.fromConnectData(topic, headers, KEY_SCHEMA, KEY));
+        assertEquals(SERIALIZED_RECORD, valueConverter.fromConnectData(topic, headers, RECORD_SCHEMA, RECORD));
+    }
+
+    private void throwExceptionWhenConvertKey(Headers headers, String topic) {
+        if (headers.iterator().hasNext()) {
+            when(headerConverter.fromConnectHeader(anyString(), anyString(), eq(Schema.STRING_SCHEMA),
+                    anyString()))
+                    .thenAnswer((Answer<byte[]>) invocation -> {
+                        String headerValue = invocation.getArgument(3, String.class);
+                        return headerValue.getBytes(StandardCharsets.UTF_8);
+                    });
+        }
+
+        when(keyConverter.fromConnectData(eq(topic), any(Headers.class), eq(KEY_SCHEMA), eq(KEY)))
+                .thenThrow(new RetriableException("Failed to convert key"));
     }
 
     private void expectApplyTransformationChain() {
@@ -817,17 +943,27 @@ public class AbstractWorkerSourceTaskTest {
         return new RecordHeaders();
     }
 
+    private void createWorkerTask(TransformationChain transformationChain, RetryWithToleranceOperator toleranceOperator) {
+        createWorkerTask(keyConverter, valueConverter, headerConverter, toleranceOperator, List::of,
+                transformationChain);
+    }
+
     private void createWorkerTask() {
-        createWorkerTask(keyConverter, valueConverter, headerConverter, RetryWithToleranceOperatorTest.noopOperator(), Collections::emptyList);
+        createWorkerTask(
+                keyConverter, valueConverter, headerConverter, RetryWithToleranceOperatorTest.noneOperator(), List::of, transformationChain);
     }
 
     private void createWorkerTask(Converter keyConverter, Converter valueConverter, HeaderConverter headerConverter,
-                                  RetryWithToleranceOperator<SourceRecord> retryWithToleranceOperator, Supplier<List<ErrorReporter<SourceRecord>>> errorReportersSupplier) {
+                                  RetryWithToleranceOperator<SourceRecord> retryWithToleranceOperator, Supplier<List<ErrorReporter<SourceRecord>>> errorReportersSupplier,
+                                  TransformationChain<SourceRecord, SourceRecord> transformationChain) {
+        Plugin<Converter> keyConverterPlugin = metrics.wrap(keyConverter, taskId,  true);
+        Plugin<Converter> valueConverterPlugin = metrics.wrap(valueConverter, taskId,  false);
+        Plugin<HeaderConverter> headerConverterPlugin = metrics.wrap(headerConverter, taskId);
         workerTask = new AbstractWorkerSourceTask(
-                taskId, sourceTask, statusListener, TargetState.STARTED, keyConverter, valueConverter, headerConverter, transformationChain,
-                sourceTaskContext, producer, admin, TopicCreationGroup.configuredGroups(sourceConfig), offsetReader, offsetWriter, offsetStore,
+                taskId, sourceTask, statusListener, TargetState.STARTED, configState, keyConverterPlugin, valueConverterPlugin, headerConverterPlugin, transformationChain,
+                workerTransactionContext, producer, admin, TopicCreationGroup.configuredGroups(sourceConfig), offsetReader, offsetWriter, offsetStore,
                 config, metrics, errorHandlingMetrics,  plugins.delegatingLoader(), Time.SYSTEM, retryWithToleranceOperator,
-                statusBackingStore, Runnable::run, errorReportersSupplier) {
+                statusBackingStore, Runnable::run, errorReportersSupplier, null, TestPlugins.noOpLoaderSwap()) {
             @Override
             protected void prepareToInitializeTask() {
             }
