@@ -37,16 +37,16 @@ import org.apache.kafka.connect.util.SinkUtils;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import org.eclipse.jetty.client.ContentResponse;
 import org.eclipse.jetty.client.HttpClient;
-import org.eclipse.jetty.client.api.ContentResponse;
-import org.eclipse.jetty.client.api.Request;
-import org.eclipse.jetty.client.util.StringContentProvider;
+import org.eclipse.jetty.client.Request;
+import org.eclipse.jetty.client.StringRequestContent;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -55,7 +55,9 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response;
+
+import static org.apache.kafka.connect.runtime.rest.RestServer.DEFAULT_REST_REQUEST_TIMEOUT_MS;
 
 abstract class EmbeddedConnect {
 
@@ -81,6 +83,10 @@ abstract class EmbeddedConnect {
         this.kafkaCluster = new EmbeddedKafkaCluster(numBrokers, brokerProps, clientProps);
         this.maskExitProcedures = maskExitProcedures;
         this.httpClient = new HttpClient();
+        // Necessary to prevent the rest request from timing out too early
+        // Before this change,ConnectWorkerIntegrationTest#testPollTimeoutExpiry() was failing
+        // because the request was being stopped by jetty before the framework responded
+        this.httpClient.setIdleTimeout(DEFAULT_REST_REQUEST_TIMEOUT_MS);
         this.assertions = new ConnectAssertions(this);
         // we should keep the original class loader and set it back after connector stopped since the connector will change the class loader,
         // and then, the Mockito will use the unexpected class loader to generate the wrong proxy instance, which makes mock failed
@@ -275,7 +281,7 @@ abstract class EmbeddedConnect {
             throw new ConnectException("Failed to serialize connector creation request: " + createConnectorRequest);
         }
 
-        Response response = requestPost(url, requestBody, Collections.emptyMap());
+        Response response = requestPost(url, requestBody, Map.of());
         if (response.getStatus() < Response.Status.BAD_REQUEST.getStatusCode()) {
             return responseToString(response);
         } else {
@@ -442,7 +448,7 @@ abstract class EmbeddedConnect {
      */
     public void restartConnector(String connName) {
         String url = endpointForResource(String.format("connectors/%s/restart", connName));
-        Response response = requestPost(url, "", Collections.emptyMap());
+        Response response = requestPost(url, "", Map.of());
         if (response.getStatus() >= Response.Status.BAD_REQUEST.getStatusCode()) {
             throw new ConnectRestException(response.getStatus(),
                     "Could not execute POST request. Error response: " + responseToString(response));
@@ -459,7 +465,7 @@ abstract class EmbeddedConnect {
      */
     public void restartTask(String connName, int taskNum) {
         String url = endpointForResource(String.format("connectors/%s/tasks/%d/restart", connName, taskNum));
-        Response response = requestPost(url, "", Collections.emptyMap());
+        Response response = requestPost(url, "", Map.of());
         if (response.getStatus() >= Response.Status.BAD_REQUEST.getStatusCode()) {
             throw new ConnectRestException(response.getStatus(),
                     "Could not execute POST request. Error response: " + responseToString(response));
@@ -485,10 +491,10 @@ abstract class EmbeddedConnect {
         } else {
             restartEndpoint = endpointForResource(restartPath);
         }
-        Response response = requestPost(restartEndpoint, "", Collections.emptyMap());
+        Response response = requestPost(restartEndpoint, "", Map.of());
         try {
             if (response.getStatus() < Response.Status.BAD_REQUEST.getStatusCode()) {
-                //only the 202 stauts returns a body
+                //only the 202 status returns a body
                 if (response.getStatus() == Response.Status.ACCEPTED.getStatusCode()) {
                     return mapper.readerFor(ConnectorStateInfo.class)
                             .readValue(responseToString(response));
@@ -570,7 +576,7 @@ abstract class EmbeddedConnect {
                         .readerFor(new TypeReference<Map<String, Map<String, List<String>>>>() { })
                         .readValue(responseToString(response));
                 return new ActiveTopicsInfo(connectorName,
-                        activeTopics.get(connectorName).getOrDefault("topics", Collections.emptyList()));
+                        activeTopics.get(connectorName).getOrDefault("topics", List.of()));
             }
         } catch (IOException e) {
             log.error("Could not read connector state from response: {}",
@@ -681,7 +687,7 @@ abstract class EmbeddedConnect {
     public String alterSourceConnectorOffset(String connectorName, Map<String, ?> partition, Map<String, ?> offset) {
         return alterConnectorOffsets(
                 connectorName,
-                new ConnectorOffsets(Collections.singletonList(new ConnectorOffset(partition, offset)))
+                new ConnectorOffsets(List.of(new ConnectorOffset(partition, offset)))
         );
     }
 
@@ -698,7 +704,7 @@ abstract class EmbeddedConnect {
     public String alterSinkConnectorOffset(String connectorName, TopicPartition topicPartition, Long offset) {
         return alterConnectorOffsets(
                 connectorName,
-                SinkUtils.consumerGroupOffsetsToConnectorOffsets(Collections.singletonMap(topicPartition, new OffsetAndMetadata(offset)))
+                SinkUtils.consumerGroupOffsetsToConnectorOffsets(Map.of(topicPartition, new OffsetAndMetadata(offset)))
         );
     }
 
@@ -922,7 +928,7 @@ abstract class EmbeddedConnect {
      * @throws ConnectException if execution of the GET request fails
      */
     public Response requestGet(String url) {
-        return requestHttpMethod(url, null, Collections.emptyMap(), "GET");
+        return requestHttpMethod(url, null, Map.of(), "GET");
     }
 
     /**
@@ -934,7 +940,7 @@ abstract class EmbeddedConnect {
      * @throws ConnectException if execution of the PUT request fails
      */
     public Response requestPut(String url, String body) {
-        return requestHttpMethod(url, body, Collections.emptyMap(), "PUT");
+        return requestHttpMethod(url, body, Map.of(), "PUT");
     }
 
     /**
@@ -959,7 +965,7 @@ abstract class EmbeddedConnect {
      * @throws ConnectException if execution of the PATCH request fails
      */
     public Response requestPatch(String url, String body) {
-        return requestHttpMethod(url, body, Collections.emptyMap(), "PATCH");
+        return requestHttpMethod(url, body, Map.of(), "PATCH");
     }
 
     /**
@@ -970,7 +976,7 @@ abstract class EmbeddedConnect {
      * @throws ConnectException if execution of the DELETE request fails
      */
     public Response requestDelete(String url) {
-        return requestHttpMethod(url, null, Collections.emptyMap(), "DELETE");
+        return requestHttpMethod(url, null, Map.of(), "DELETE");
     }
 
     /**
@@ -992,8 +998,8 @@ abstract class EmbeddedConnect {
             Request req = httpClient.newRequest(url);
             req.method(httpMethod);
             if (body != null) {
-                headers.forEach(req::header);
-                req.content(new StringContentProvider(body), "application/json");
+                req.headers(mutable -> headers.forEach(mutable::add));
+                req.body(new StringRequestContent("application/json", body, StandardCharsets.UTF_8));
             }
 
             ContentResponse res = req.send();
@@ -1003,7 +1009,7 @@ abstract class EmbeddedConnect {
                     .entity(res.getContentAsString())
                     .build();
         } catch (Exception e) {
-            log.error("Could not execute " + httpMethod + " request to " + url, e);
+            log.error("Could not execute {} request to {}", httpMethod, url, e);
             throw new ConnectException(e);
         }
     }
