@@ -39,12 +39,12 @@ import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.common.utils.annotation.ApiKeyVersionsSource;
-import org.apache.kafka.coordinator.group.MetadataImageBuilder;
+import org.apache.kafka.coordinator.common.runtime.KRaftCoordinatorMetadataImage;
+import org.apache.kafka.coordinator.common.runtime.MetadataImageBuilder;
 import org.apache.kafka.coordinator.group.OffsetAndMetadata;
 import org.apache.kafka.coordinator.group.OffsetExpirationCondition;
 import org.apache.kafka.coordinator.group.OffsetExpirationConditionImpl;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMemberMetadataValue;
-import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetricsShard;
 import org.apache.kafka.coordinator.group.modern.Assignment;
 import org.apache.kafka.coordinator.group.modern.MemberState;
 import org.apache.kafka.coordinator.group.modern.consumer.ConsumerGroup;
@@ -57,8 +57,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -82,7 +80,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
 
 public class ClassicGroupTest {
     private final String protocolType = "consumer";
@@ -403,7 +400,7 @@ public class ClassicGroupTest {
             .setName("range")
             .setMetadata(ConsumerProtocol.serializeSubscription(
                 new ConsumerPartitionAssignor.Subscription(
-                    Collections.singletonList("foo")
+                    List.of("foo")
                 )).array()));
 
         ClassicGroupMember member = new ClassicGroupMember(
@@ -422,7 +419,7 @@ public class ClassicGroupTest {
 
         group.initNextGeneration();
 
-        Set<String> expectedTopics = new HashSet<>(Collections.singleton("foo"));
+        Set<String> expectedTopics = Set.of("foo");
         assertEquals(expectedTopics, group.subscribedTopics().get());
 
         group.transitionTo(PREPARING_REBALANCE);
@@ -430,7 +427,7 @@ public class ClassicGroupTest {
 
         group.initNextGeneration();
 
-        assertEquals(Optional.of(Collections.emptySet()), group.subscribedTopics());
+        assertEquals(Optional.of(Set.of()), group.subscribedTopics());
 
         protocols = new JoinGroupRequestProtocolCollection();
         protocols.add(new JoinGroupRequestProtocol()
@@ -561,8 +558,8 @@ public class ClassicGroupTest {
         int newSessionTimeoutMs = 20000;
         group.updateMember(member, newProtocols, newRebalanceTimeoutMs, newSessionTimeoutMs, null);
 
-        assertEquals(group.rebalanceTimeoutMs(), newRebalanceTimeoutMs);
-        assertEquals(member.sessionTimeoutMs(), newSessionTimeoutMs);
+        assertEquals(newRebalanceTimeoutMs, group.rebalanceTimeoutMs());
+        assertEquals(newSessionTimeoutMs, member.sessionTimeoutMs());
         assertEquals(newProtocols, member.supportedProtocols());
     }
 
@@ -851,9 +848,9 @@ public class ClassicGroupTest {
 
         group.add(member);
         assertTrue(group.addPendingSyncMember(memberId));
-        assertEquals(Collections.singleton(memberId), group.allPendingSyncMembers());
+        assertEquals(Set.of(memberId), group.allPendingSyncMembers());
         group.removePendingSyncMember(memberId);
-        assertEquals(Collections.emptySet(), group.allPendingSyncMembers());
+        assertEquals(Set.of(), group.allPendingSyncMembers());
     }
 
     @Test
@@ -876,9 +873,9 @@ public class ClassicGroupTest {
 
         group.add(member);
         assertTrue(group.addPendingSyncMember(memberId));
-        assertEquals(Collections.singleton(memberId), group.allPendingSyncMembers());
+        assertEquals(Set.of(memberId), group.allPendingSyncMembers());
         group.remove(memberId);
-        assertEquals(Collections.emptySet(), group.allPendingSyncMembers());
+        assertEquals(Set.of(), group.allPendingSyncMembers());
     }
 
     @Test
@@ -902,9 +899,9 @@ public class ClassicGroupTest {
         group.add(member);
         group.transitionTo(PREPARING_REBALANCE);
         assertTrue(group.addPendingSyncMember(memberId));
-        assertEquals(Collections.singleton(memberId), group.allPendingSyncMembers());
+        assertEquals(Set.of(memberId), group.allPendingSyncMembers());
         group.initNextGeneration();
-        assertEquals(Collections.emptySet(), group.allPendingSyncMembers());
+        assertEquals(Set.of(), group.allPendingSyncMembers());
     }
 
     @Test
@@ -1010,7 +1007,7 @@ public class ClassicGroupTest {
             100,
             100,
             "consumer",
-            new JoinGroupRequestProtocolCollection(Collections.singletonList(
+            new JoinGroupRequestProtocolCollection(List.of(
                 new JoinGroupRequestProtocol()
                     .setName("roundrobin")
                     .setMetadata(new byte[0])).iterator())
@@ -1126,7 +1123,7 @@ public class ClassicGroupTest {
         long currentTimestamp = 30000L;
         long commitTimestamp = 20000L;
         long offsetsRetentionMs = 10000L;
-        OffsetAndMetadata offsetAndMetadata = new OffsetAndMetadata(15000L, OptionalInt.empty(), "", commitTimestamp, OptionalLong.empty());
+        OffsetAndMetadata offsetAndMetadata = new OffsetAndMetadata(15000L, OptionalInt.empty(), "", commitTimestamp, OptionalLong.empty(), Uuid.ZERO_UUID);
         MockTime time = new MockTime();
         long currentStateTimestamp = time.milliseconds();
         ClassicGroup group = new ClassicGroup(new LogContext(), "groupId", EMPTY, time);
@@ -1144,7 +1141,7 @@ public class ClassicGroupTest {
         protocols.add(new JoinGroupRequestProtocol()
             .setName("range")
             .setMetadata(ConsumerProtocol.serializeSubscription(
-                new ConsumerPartitionAssignor.Subscription(Collections.singletonList("topic"))).array()));
+                new ConsumerPartitionAssignor.Subscription(List.of("topic"))).array()));
 
         ClassicGroupMember memberWithNonConsumerProtocol = new ClassicGroupMember(
             "memberWithNonConsumerProtocol",
@@ -1214,7 +1211,7 @@ public class ClassicGroupTest {
         protocols.add(new JoinGroupRequestProtocol()
             .setName("range")
             .setMetadata(ConsumerProtocol.serializeSubscription(
-                new ConsumerPartitionAssignor.Subscription(Collections.singletonList("topic"))).array()));
+                new ConsumerPartitionAssignor.Subscription(List.of("topic"))).array()));
 
         ClassicGroupMember memberWithNonConsumerProtocol = new ClassicGroupMember(
             "memberWithNonConsumerProtocol",
@@ -1252,7 +1249,7 @@ public class ClassicGroupTest {
         group.transitionTo(PREPARING_REBALANCE);
         group.initNextGeneration();
         assertTrue(group.isInState(EMPTY));
-        assertEquals(Optional.of(Collections.emptySet()), group.computeSubscribedTopics());
+        assertEquals(Optional.of(Set.of()), group.computeSubscribedTopics());
         assertTrue(group.usesConsumerGroupProtocol());
         assertFalse(group.isSubscribedToTopic("topic"));
 
@@ -1261,7 +1258,7 @@ public class ClassicGroupTest {
         group.transitionTo(PREPARING_REBALANCE);
         group.initNextGeneration();
         assertTrue(group.isInState(COMPLETING_REBALANCE));
-        assertEquals(Optional.of(Collections.singleton("topic")), group.computeSubscribedTopics());
+        assertEquals(Optional.of(Set.of("topic")), group.computeSubscribedTopics());
         assertTrue(group.usesConsumerGroupProtocol());
         assertTrue(group.isSubscribedToTopic("topic"));
     }
@@ -1269,22 +1266,22 @@ public class ClassicGroupTest {
     @Test
     public void testIsInStates() {
         ClassicGroup group = new ClassicGroup(new LogContext(), "groupId", EMPTY, Time.SYSTEM);
-        assertTrue(group.isInStates(Collections.singleton("empty"), 0));
+        assertTrue(group.isInStates(Set.of("empty"), 0));
 
         group.transitionTo(PREPARING_REBALANCE);
-        assertTrue(group.isInStates(Collections.singleton("preparingrebalance"), 0));
-        assertFalse(group.isInStates(Collections.singleton("PreparingRebalance"), 0));
+        assertTrue(group.isInStates(Set.of("preparingrebalance"), 0));
+        assertFalse(group.isInStates(Set.of("PreparingRebalance"), 0));
 
 
         group.transitionTo(COMPLETING_REBALANCE);
-        assertTrue(group.isInStates(new HashSet<>(Collections.singletonList("completingrebalance")), 0));
+        assertTrue(group.isInStates(Set.of("completingrebalance"), 0));
 
         group.transitionTo(STABLE);
-        assertTrue(group.isInStates(Collections.singleton("stable"), 0));
-        assertFalse(group.isInStates(Collections.singleton("empty"), 0));
+        assertTrue(group.isInStates(Set.of("stable"), 0));
+        assertFalse(group.isInStates(Set.of("empty"), 0));
 
         group.transitionTo(DEAD);
-        assertTrue(group.isInStates(new HashSet<>(Arrays.asList("dead", " ")), 0));
+        assertTrue(group.isInStates(Set.of("dead", " "), 0));
     }
 
     @Test
@@ -1384,8 +1381,7 @@ public class ClassicGroupTest {
 
         ConsumerGroup consumerGroup = new ConsumerGroup(
             new SnapshotRegistry(logContext),
-            groupId,
-            mock(GroupCoordinatorMetricsShard.class)
+            groupId
         );
         consumerGroup.setGroupEpoch(10);
         consumerGroup.setTargetAssignmentEpoch(10);
@@ -1397,15 +1393,15 @@ public class ClassicGroupTest {
             mkTopicAssignment(fooTopicId, 1)
         )));
 
-        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols1 = Collections.singletonList(createClassicProtocol(
+        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols1 = List.of(createClassicProtocol(
             "range",
-            Collections.singletonList(fooTopicName),
-            Collections.singletonList(new TopicPartition(fooTopicName, 0))
+            List.of(fooTopicName),
+            List.of(new TopicPartition(fooTopicName, 0))
         ));
-        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols2 = Collections.singletonList(createClassicProtocol(
+        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols2 = List.of(createClassicProtocol(
             "range",
-            Collections.singletonList(fooTopicName),
-            Collections.singletonList(new TopicPartition(fooTopicName, 1))
+            List.of(fooTopicName),
+            List.of(new TopicPartition(fooTopicName, 1))
         ));
 
         ConsumerGroupMember member1 = new ConsumerGroupMember.Builder(memberId1)
@@ -1414,7 +1410,7 @@ public class ClassicGroupTest {
             .setPreviousMemberEpoch(9)
             .setClientId("client-id")
             .setClientHost("client-host")
-            .setSubscribedTopicNames(Collections.singletonList(fooTopicName))
+            .setSubscribedTopicNames(List.of(fooTopicName))
             .setServerAssignorName("range")
             .setRebalanceTimeoutMs(45000)
             .setClassicMemberMetadata(
@@ -1433,7 +1429,7 @@ public class ClassicGroupTest {
             .setPreviousMemberEpoch(9)
             .setClientId("client-id")
             .setClientHost("client-host")
-            .setSubscribedTopicNames(Collections.singletonList(fooTopicName))
+            .setSubscribedTopicNames(List.of(fooTopicName))
             .setServerAssignorName("range")
             .setRebalanceTimeoutMs(45000)
             .setAssignedPartitions(mkAssignment(
@@ -1446,7 +1442,7 @@ public class ClassicGroupTest {
             .setPreviousMemberEpoch(0)
             .setClientId("client-id")
             .setClientHost("client-host")
-            .setSubscribedTopicNames(Collections.singletonList(fooTopicName))
+            .setSubscribedTopicNames(List.of(fooTopicName))
             .setServerAssignorName("range")
             .setRebalanceTimeoutMs(45000)
             .setClassicMemberMetadata(
@@ -1459,11 +1455,11 @@ public class ClassicGroupTest {
 
         ClassicGroup classicGroup = ClassicGroup.fromConsumerGroup(
             consumerGroup,
-            memberId2,
+            Set.of(),
             newMember2,
             logContext,
             time,
-            metadataImage
+            new KRaftCoordinatorMetadataImage(metadataImage)
         );
 
         ClassicGroup expectedClassicGroup = new ClassicGroup(
@@ -1486,13 +1482,13 @@ public class ClassicGroupTest {
                 member1.rebalanceTimeoutMs(),
                 member1.classicProtocolSessionTimeout().get(),
                 ConsumerProtocol.PROTOCOL_TYPE,
-                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(Collections.singletonList(
+                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(List.of(
                     new JoinGroupRequestData.JoinGroupRequestProtocol()
                         .setName(protocols1.get(0).name())
                         .setMetadata(protocols1.get(0).metadata())
                 ).iterator()),
                 Utils.toArray(ConsumerProtocol.serializeAssignment(new ConsumerPartitionAssignor.Assignment(
-                    Collections.singletonList(new TopicPartition(fooTopicName, 0))
+                    List.of(new TopicPartition(fooTopicName, 0))
                 )))
             )
         );
@@ -1505,13 +1501,13 @@ public class ClassicGroupTest {
                 newMember2.rebalanceTimeoutMs(),
                 newMember2.classicProtocolSessionTimeout().get(),
                 ConsumerProtocol.PROTOCOL_TYPE,
-                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(Collections.singletonList(
+                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(List.of(
                     new JoinGroupRequestData.JoinGroupRequestProtocol()
                         .setName(protocols2.get(0).name())
                         .setMetadata(protocols2.get(0).metadata())
                 ).iterator()),
                 Utils.toArray(ConsumerProtocol.serializeAssignment(new ConsumerPartitionAssignor.Assignment(
-                    Collections.singletonList(new TopicPartition(fooTopicName, 1))
+                    List.of(new TopicPartition(fooTopicName, 1))
                 )))
             )
         );
@@ -1537,8 +1533,7 @@ public class ClassicGroupTest {
 
         ConsumerGroup consumerGroup = new ConsumerGroup(
             new SnapshotRegistry(logContext),
-            groupId,
-            mock(GroupCoordinatorMetricsShard.class)
+            groupId
         );
         consumerGroup.setGroupEpoch(10);
         consumerGroup.setTargetAssignmentEpoch(10);
@@ -1549,10 +1544,10 @@ public class ClassicGroupTest {
             mkTopicAssignment(fooTopicId, 1)
         )));
 
-        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols1 = Collections.singletonList(createClassicProtocol(
+        List<ConsumerGroupMemberMetadataValue.ClassicProtocol> protocols1 = List.of(createClassicProtocol(
             "range",
-            Collections.singletonList(fooTopicName),
-            Collections.singletonList(new TopicPartition(fooTopicName, 0))
+            List.of(fooTopicName),
+            List.of(new TopicPartition(fooTopicName, 0))
         ));
 
         ConsumerGroupMember member1 = new ConsumerGroupMember.Builder(memberId1)
@@ -1561,7 +1556,7 @@ public class ClassicGroupTest {
             .setPreviousMemberEpoch(9)
             .setClientId("client-id")
             .setClientHost("client-host")
-            .setSubscribedTopicNames(Collections.singletonList(fooTopicName))
+            .setSubscribedTopicNames(List.of(fooTopicName))
             .setServerAssignorName("range")
             .setRebalanceTimeoutMs(45000)
             .setClassicMemberMetadata(
@@ -1580,7 +1575,7 @@ public class ClassicGroupTest {
             .setPreviousMemberEpoch(9)
             .setClientId("client-id")
             .setClientHost("client-host")
-            .setSubscribedTopicNames(Collections.singletonList(fooTopicName))
+            .setSubscribedTopicNames(List.of(fooTopicName))
             .setServerAssignorName("range")
             .setRebalanceTimeoutMs(45000)
             .setAssignedPartitions(mkAssignment(
@@ -1590,11 +1585,11 @@ public class ClassicGroupTest {
 
         ClassicGroup classicGroup = ClassicGroup.fromConsumerGroup(
             consumerGroup,
-            memberId2,
+            Set.of(member2),
             null,
             logContext,
             time,
-            metadataImage
+            new KRaftCoordinatorMetadataImage(metadataImage)
         );
 
         ClassicGroup expectedClassicGroup = new ClassicGroup(
@@ -1617,13 +1612,13 @@ public class ClassicGroupTest {
                 member1.rebalanceTimeoutMs(),
                 member1.classicProtocolSessionTimeout().get(),
                 ConsumerProtocol.PROTOCOL_TYPE,
-                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(Collections.singletonList(
+                new JoinGroupRequestData.JoinGroupRequestProtocolCollection(List.of(
                     new JoinGroupRequestData.JoinGroupRequestProtocol()
                         .setName(protocols1.get(0).name())
                         .setMetadata(protocols1.get(0).metadata())
                 ).iterator()),
                 Utils.toArray(ConsumerProtocol.serializeAssignment(new ConsumerPartitionAssignor.Assignment(
-                    Collections.singletonList(new TopicPartition(fooTopicName, 0))
+                    List.of(new TopicPartition(fooTopicName, 0))
                 )))
             )
         );
