@@ -18,14 +18,14 @@ package org.apache.kafka.coordinator.group.modern.share;
 
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData;
-import org.apache.kafka.coordinator.group.MetadataImageBuilder;
+import org.apache.kafka.coordinator.common.runtime.KRaftCoordinatorMetadataImage;
+import org.apache.kafka.coordinator.common.runtime.MetadataImageBuilder;
 import org.apache.kafka.coordinator.group.generated.ShareGroupMemberMetadataValue;
 import org.apache.kafka.image.MetadataImage;
 
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -117,7 +117,7 @@ public class ShareGroupMemberTest {
 
         updatedMember = new ShareGroupMember.Builder(member)
             .maybeUpdateRackId(Optional.of("new-rack-id"))
-            .maybeUpdateSubscribedTopicNames(Optional.of(Collections.singletonList("zar")))
+            .maybeUpdateSubscribedTopicNames(Optional.of(List.of("zar")))
             .build();
 
         assertNull(member.instanceId());
@@ -170,7 +170,7 @@ public class ShareGroupMemberTest {
                 mkTopicAssignment(topicId1, 0, 1, 2)))
             .build();
 
-        ShareGroupDescribeResponseData.Member actual = member.asShareGroupDescribeMember(metadataImage.topics());
+        ShareGroupDescribeResponseData.Member actual = member.asShareGroupDescribeMember(new KRaftCoordinatorMetadataImage(metadataImage));
         ShareGroupDescribeResponseData.Member expected = new ShareGroupDescribeResponseData.Member()
             .setMemberId(memberId)
             .setMemberEpoch(epoch)
@@ -180,7 +180,7 @@ public class ShareGroupMemberTest {
             .setSubscribedTopicNames(subscribedTopicNames)
             .setAssignment(
                 new ShareGroupDescribeResponseData.Assignment()
-                    .setTopicPartitions(Collections.singletonList(new ShareGroupDescribeResponseData.TopicPartitions()
+                    .setTopicPartitions(List.of(new ShareGroupDescribeResponseData.TopicPartitions()
                         .setTopicId(topicId1)
                         .setTopicName("topic1")
                         .setPartitions(assignedPartitions)
