@@ -20,27 +20,21 @@ package org.apache.kafka.jmh.metadata;
 import kafka.coordinator.transaction.TransactionCoordinator;
 import kafka.network.RequestChannel;
 import kafka.server.AutoTopicCreationManager;
-import kafka.server.ClientQuotaManager;
 import kafka.server.ClientRequestQuotaManager;
-import kafka.server.ControllerMutationQuotaManager;
 import kafka.server.FetchManager;
 import kafka.server.ForwardingManager;
 import kafka.server.KafkaApis;
 import kafka.server.KafkaConfig;
-import kafka.server.MetadataCache;
 import kafka.server.QuotaFactory;
-import kafka.server.RaftSupport;
 import kafka.server.ReplicaManager;
 import kafka.server.ReplicationQuotaManager;
-import kafka.server.SimpleApiVersionManager;
 import kafka.server.builders.KafkaApisBuilder;
 import kafka.server.metadata.KRaftMetadataCache;
-import kafka.server.metadata.MockConfigRepository;
+import kafka.server.share.SharePartitionManager;
 
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.memory.MemoryPool;
 import org.apache.kafka.common.message.ApiMessageType;
-import org.apache.kafka.common.message.UpdateMetadataRequestData.UpdateMetadataEndpoint;
 import org.apache.kafka.common.metadata.PartitionRecord;
 import org.apache.kafka.common.metadata.RegisterBrokerRecord;
 import org.apache.kafka.common.metadata.TopicRecord;
@@ -53,17 +47,23 @@ import org.apache.kafka.common.requests.RequestHeader;
 import org.apache.kafka.common.security.auth.KafkaPrincipal;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
 import org.apache.kafka.common.utils.Time;
+import org.apache.kafka.coordinator.group.GroupConfigManager;
 import org.apache.kafka.coordinator.group.GroupCoordinator;
 import org.apache.kafka.image.MetadataDelta;
 import org.apache.kafka.image.MetadataImage;
 import org.apache.kafka.image.MetadataProvenance;
+import org.apache.kafka.metadata.MockConfigRepository;
 import org.apache.kafka.network.RequestConvertToJson;
 import org.apache.kafka.network.metrics.RequestChannelMetrics;
 import org.apache.kafka.raft.QuorumConfig;
+import org.apache.kafka.server.ClientMetricsManager;
+import org.apache.kafka.server.SimpleApiVersionManager;
 import org.apache.kafka.server.common.FinalizedFeatures;
 import org.apache.kafka.server.common.KRaftVersion;
 import org.apache.kafka.server.common.MetadataVersion;
 import org.apache.kafka.server.config.KRaftConfigs;
+import org.apache.kafka.server.quota.ClientQuotaManager;
+import org.apache.kafka.server.quota.ControllerMutationQuotaManager;
 import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
 import org.mockito.Mockito;
@@ -82,8 +82,6 @@ import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
 
 import java.nio.ByteBuffer;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
@@ -109,7 +107,7 @@ public class KRaftMetadataRequestBenchmark {
     private final Metrics metrics = new Metrics();
     private final int brokerId = 1;
     private final ForwardingManager forwardingManager = Mockito.mock(ForwardingManager.class);
-    private final KRaftMetadataCache metadataCache = MetadataCache.kRaftMetadataCache(brokerId, () -> KRaftVersion.KRAFT_VERSION_1);
+    private final KRaftMetadataCache metadataCache = new KRaftMetadataCache(brokerId, () -> KRaftVersion.KRAFT_VERSION_1);
     private final ClientQuotaManager clientQuotaManager = Mockito.mock(ClientQuotaManager.class);
     private final ClientRequestQuotaManager clientRequestQuotaManager = Mockito.mock(ClientRequestQuotaManager.class);
     private final ControllerMutationQuotaManager controllerMutationQuotaManager = Mockito.mock(ControllerMutationQuotaManager.class);
@@ -118,6 +116,9 @@ public class KRaftMetadataRequestBenchmark {
             clientQuotaManager, clientRequestQuotaManager, controllerMutationQuotaManager, replicaQuotaManager,
             replicaQuotaManager, replicaQuotaManager, Optional.empty());
     private final FetchManager fetchManager = Mockito.mock(FetchManager.class);
+    private final SharePartitionManager sharePartitionManager = Mockito.mock(SharePartitionManager.class);
+    private final ClientMetricsManager clientMetricsManager = Mockito.mock(ClientMetricsManager.class);
+    private final GroupConfigManager groupConfigManager = Mockito.mock(GroupConfigManager.class);
     private final BrokerTopicStats brokerTopicStats = new BrokerTopicStats(false);
     private final KafkaPrincipal principal = new KafkaPrincipal(KafkaPrincipal.USER_TYPE, "test-user");
     @Param({"500", "1000",  "5000"})
@@ -138,12 +139,7 @@ public class KRaftMetadataRequestBenchmark {
         MetadataDelta buildupMetadataDelta = new MetadataDelta(MetadataImage.EMPTY);
         IntStream.range(0, 5).forEach(brokerId -> {
             RegisterBrokerRecord.BrokerEndpointCollection endpoints = new RegisterBrokerRecord.BrokerEndpointCollection();
-            endpoints(brokerId).forEach(endpoint ->
-                endpoints.add(new RegisterBrokerRecord.BrokerEndpoint().
-                    setHost(endpoint.host()).
-                    setPort(endpoint.port()).
-                    setName(endpoint.listener()).
-                    setSecurityProtocol(endpoint.securityProtocol())));
+            endpoints.addAll(endpoints(brokerId));
             buildupMetadataDelta.replay(new RegisterBrokerRecord().
                 setBrokerId(brokerId).
                 setBrokerEpoch(100L).
@@ -159,23 +155,23 @@ public class KRaftMetadataRequestBenchmark {
                 buildupMetadataDelta.replay(new PartitionRecord().
                     setPartitionId(partitionId).
                     setTopicId(topicId).
-                    setReplicas(Arrays.asList(0, 1, 3)).
-                    setIsr(Arrays.asList(0, 1, 3)).
-                    setRemovingReplicas(Collections.emptyList()).
-                    setAddingReplicas(Collections.emptyList()).
+                    setReplicas(List.of(0, 1, 3)).
+                    setIsr(List.of(0, 1, 3)).
+                    setRemovingReplicas(List.of()).
+                    setAddingReplicas(List.of()).
                     setLeader(partitionCount % 5).
                     setLeaderEpoch(0)));
         });
         metadataCache.setImage(buildupMetadataDelta.apply(MetadataProvenance.EMPTY));
     }
 
-    private List<UpdateMetadataEndpoint> endpoints(final int brokerId) {
-        return Collections.singletonList(
-                new UpdateMetadataEndpoint()
-                        .setHost("host_" + brokerId)
-                        .setPort(9092)
-                        .setSecurityProtocol(SecurityProtocol.PLAINTEXT.id)
-                        .setListener(ListenerName.forSecurityProtocol(SecurityProtocol.PLAINTEXT).value()));
+    private List<RegisterBrokerRecord.BrokerEndpoint> endpoints(final int brokerId) {
+        return List.of(
+                new RegisterBrokerRecord.BrokerEndpoint().
+                        setHost("host_" + brokerId).
+                        setPort(9092).
+                        setName(ListenerName.forSecurityProtocol(SecurityProtocol.PLAINTEXT).value()).
+                        setSecurityProtocol(SecurityProtocol.PLAINTEXT.id));
     }
 
     private KafkaApis createKafkaApis() {
@@ -187,7 +183,7 @@ public class KRaftMetadataRequestBenchmark {
         KafkaConfig config = new KafkaConfig(kafkaProps);
         return new KafkaApisBuilder().
                 setRequestChannel(requestChannel).
-                setMetadataSupport(new RaftSupport(forwardingManager, metadataCache)).
+                setForwardingManager(forwardingManager).
                 setReplicaManager(replicaManager).
                 setGroupCoordinator(groupCoordinator).
                 setTxnCoordinator(transactionCoordinator).
@@ -197,10 +193,11 @@ public class KRaftMetadataRequestBenchmark {
                 setConfigRepository(new MockConfigRepository()).
                 setMetadataCache(metadataCache).
                 setMetrics(metrics).
-                setAuthorizer(Optional.empty()).
+                setAuthorizerPlugin(Optional.empty()).
                 setQuotas(quotaManagers).
                 setFetchManager(fetchManager).
-                setSharePartitionManager(Optional.empty()).
+                setSharePartitionManager(sharePartitionManager).
+                setClientMetricsManager(clientMetricsManager).
                 setBrokerTopicStats(brokerTopicStats).
                 setClusterId("clusterId").
                 setTime(Time.SYSTEM).
@@ -209,6 +206,7 @@ public class KRaftMetadataRequestBenchmark {
                         ApiMessageType.ListenerType.BROKER,
                         false,
                         () -> FinalizedFeatures.fromKRaftVersion(MetadataVersion.latestTesting()))).
+                setGroupConfigManager(groupConfigManager).
                 build();
     }
 
@@ -221,7 +219,7 @@ public class KRaftMetadataRequestBenchmark {
     private RequestChannel.Request buildAllTopicMetadataRequest() {
         MetadataRequest metadataRequest = MetadataRequest.Builder.allTopics().build();
         RequestHeader header = new RequestHeader(metadataRequest.apiKey(), metadataRequest.version(), "", 0);
-        ByteBuffer bodyBuffer = metadataRequest.serialize();
+        ByteBuffer bodyBuffer = metadataRequest.serialize().buffer();
 
         RequestContext context = new RequestContext(header, "1", null, principal,
                 ListenerName.forSecurityProtocol(SecurityProtocol.PLAINTEXT),
@@ -239,10 +237,5 @@ public class KRaftMetadataRequestBenchmark {
         Option<com.fasterxml.jackson.databind.JsonNode> option = allTopicMetadataRequest.requestLog();
         Optional<com.fasterxml.jackson.databind.JsonNode> optional = option.isDefined() ? Optional.of(option.get()) : Optional.empty();
         return RequestConvertToJson.requestDesc(allTopicMetadataRequest.header(), optional, allTopicMetadataRequest.isForwarded()).toString();
-    }
-
-    @Benchmark
-    public void testTopicIdInfo() {
-        metadataCache.topicIdInfo();
     }
 }
