@@ -23,9 +23,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -35,7 +34,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 final class ElectionStateTest {
     @Test
     void testVotedCandidateWithoutVotedId() {
-        ElectionState electionState = ElectionState.withUnknownLeader(5, Collections.emptySet());
+        ElectionState electionState = ElectionState.withUnknownLeader(5, Set.of());
         assertFalse(electionState.isVotedCandidate(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID)));
     }
 
@@ -44,7 +43,7 @@ final class ElectionStateTest {
         ElectionState electionState = ElectionState.withVotedCandidate(
             5,
             ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID),
-            Collections.emptySet()
+            Set.of()
         );
         assertTrue(electionState.isVotedCandidate(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID)));
         assertTrue(
@@ -58,7 +57,7 @@ final class ElectionStateTest {
         ElectionState electionState = ElectionState.withVotedCandidate(
             5,
             votedKey,
-            Collections.emptySet()
+            Set.of()
         );
         assertFalse(electionState.isVotedCandidate(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID)));
         assertTrue(electionState.isVotedCandidate(votedKey));
@@ -68,28 +67,36 @@ final class ElectionStateTest {
     @ValueSource(shorts = {0, 1})
     void testQuorumStateDataRoundTrip(short version) {
         ReplicaKey votedKey = ReplicaKey.of(1, Uuid.randomUuid());
-        List<ElectionState> electionStates = Arrays.asList(
+        List<ElectionState> electionStates = List.of(
             ElectionState.withUnknownLeader(5, Set.of(1, 2, 3)),
-            ElectionState.withElectedLeader(5, 1, Set.of(1, 2, 3)),
-            ElectionState.withVotedCandidate(5, votedKey, Set.of(1, 2, 3))
+            ElectionState.withElectedLeader(5, 1, Optional.empty(), Set.of(1, 2, 3)),
+            ElectionState.withVotedCandidate(5, votedKey, Set.of(1, 2, 3)),
+            ElectionState.withElectedLeader(5, 1, Optional.of(votedKey), Set.of(1, 2, 3))
         );
 
         final List<ElectionState> expected;
         if (version == 0) {
-            expected = Arrays.asList(
+            expected = List.of(
                 ElectionState.withUnknownLeader(5, Set.of(1, 2, 3)),
-                ElectionState.withElectedLeader(5, 1, Set.of(1, 2, 3)),
+                ElectionState.withElectedLeader(5, 1, Optional.empty(), Set.of(1, 2, 3)),
                 ElectionState.withVotedCandidate(
                     5,
                     ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID),
                     Set.of(1, 2, 3)
+                ),
+                ElectionState.withElectedLeader(
+                    5,
+                    1,
+                    Optional.of(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID)),
+                    Set.of(1, 2, 3)
                 )
             );
         } else {
-            expected = Arrays.asList(
-                ElectionState.withUnknownLeader(5, Collections.emptySet()),
-                ElectionState.withElectedLeader(5, 1, Collections.emptySet()),
-                ElectionState.withVotedCandidate(5, votedKey, Collections.emptySet())
+            expected = List.of(
+                ElectionState.withUnknownLeader(5, Set.of()),
+                ElectionState.withElectedLeader(5, 1, Optional.empty(), Set.of()),
+                ElectionState.withVotedCandidate(5, votedKey, Set.of()),
+                ElectionState.withElectedLeader(5, 1, Optional.of(votedKey), Set.of())
             );
         }
 
