@@ -16,17 +16,18 @@
  */
 package org.apache.kafka.server.common;
 
-import java.util.Collections;
 import java.util.Map;
 
 public enum KRaftVersion implements FeatureVersion {
     // Version 0 is the initial version of KRaft.
-    KRAFT_VERSION_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION),
+    KRAFT_VERSION_0(0, MetadataVersion.MINIMUM_VERSION),
 
     // Version 1 enables KIP-853.
     KRAFT_VERSION_1(1, MetadataVersion.IBP_3_9_IV0);
 
     public static final String FEATURE_NAME = "kraft.version";
+
+    public static final KRaftVersion LATEST_PRODUCTION = KRAFT_VERSION_1;
 
     private final short featureLevel;
     private final MetadataVersion bootstrapMetadataVersion;
@@ -51,7 +52,7 @@ public enum KRaftVersion implements FeatureVersion {
             case 1:
                 return KRAFT_VERSION_1;
             default:
-                throw new RuntimeException("Unknown KRaft feature level: " + (int) version);
+                throw new IllegalArgumentException("Unknown KRaft feature level: " + (int) version);
         }
     }
 
@@ -71,12 +72,15 @@ public enum KRaftVersion implements FeatureVersion {
 
     @Override
     public Map<String, Short> dependencies() {
-        if (this.featureLevel == 0) {
-            return Collections.emptyMap();
-        } else {
-            return Collections.singletonMap(
-                MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_9_IV0.featureLevel());
-        }
+        return Map.of();
+    }
+
+    public boolean isAtLeast(KRaftVersion otherVersion) {
+        return this.compareTo(otherVersion) >= 0;
+    }
+
+    public boolean isMoreThan(KRaftVersion otherVersion) {
+        return this.compareTo(otherVersion) > 0;
     }
 
     public short quorumStateVersion() {
@@ -85,23 +89,26 @@ public enum KRaftVersion implements FeatureVersion {
                 return (short) 0;
             case KRAFT_VERSION_1:
                 return (short) 1;
+            default:
+                throw new IllegalStateException("Unsupported KRaft feature level: " + this);
         }
-        throw new IllegalStateException("Unsupported KRaft feature level: " + this);
     }
 
     public short kraftVersionRecordVersion() {
         switch (this) {
             case KRAFT_VERSION_1:
                 return (short) 0;
+            default:
+                throw new IllegalStateException("Unsupported KRaft feature level: " + this);
         }
-        throw new IllegalStateException("Unsupported KRaft feature level: " + this);
     }
 
     public short votersRecordVersion() {
         switch (this) {
             case KRAFT_VERSION_1:
                 return (short) 0;
+            default:
+                throw new IllegalStateException("Unsupported KRaft feature level: " + this);
         }
-        throw new IllegalStateException("Unsupported KRaft feature level: " + this);
     }
 }
