@@ -23,8 +23,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -64,8 +62,8 @@ public class TimelineHashMapTest {
         TimelineHashMap<Integer, String> map = new TimelineHashMap<>(registry, 1);
         map.put(123, "abc");
         map.put(456, "def");
-        assertTrue(iteratorToList(map.keySet().iterator()).containsAll(Arrays.asList(123, 456)));
-        assertTrue(iteratorToList(map.values().iterator()).containsAll(Arrays.asList("abc", "def")));
+        assertTrue(iteratorToList(map.keySet().iterator()).containsAll(List.of(123, 456)));
+        assertTrue(iteratorToList(map.values().iterator()).containsAll(List.of("abc", "def")));
         assertTrue(map.containsValue("abc"));
         assertTrue(map.containsKey(456));
         assertFalse(map.isEmpty());
@@ -76,7 +74,7 @@ public class TimelineHashMapTest {
         snapshotValues.add(iter.next().getValue());
         snapshotValues.add(iter.next().getValue());
         assertFalse(iter.hasNext());
-        assertTrue(snapshotValues.containsAll(Arrays.asList("abc", "def")));
+        assertTrue(snapshotValues.containsAll(List.of("abc", "def")));
         assertFalse(map.isEmpty(2));
         assertTrue(map.isEmpty());
     }
@@ -96,7 +94,7 @@ public class TimelineHashMapTest {
         assertNull(map.putIfAbsent(1, "xyz"));
         assertEquals("xyz", map.putIfAbsent(1, "123"));
         assertEquals("xyz", map.putIfAbsent(1, "ghi"));
-        map.putAll(Collections.singletonMap(2, "b"));
+        map.putAll(Map.of(2, "b"));
         assertTrue(map.containsKey(2));
         assertEquals("xyz", map.remove(1));
         assertEquals("b", map.remove(2));
