@@ -18,13 +18,12 @@ package org.apache.kafka.tiered.storage.integration;
 
 import org.apache.kafka.common.config.TopicConfig;
 
-import java.util.Collections;
 import java.util.Map;
 
 public final class DeleteSegmentsByRetentionTimeTest extends BaseDeleteSegmentsTest {
 
     @Override
     protected Map<String, String> configsToBeAdded() {
-        return Collections.singletonMap(TopicConfig.RETENTION_MS_CONFIG, "1");
+        return Map.of(TopicConfig.RETENTION_MS_CONFIG, "1");
     }
 }
