@@ -16,7 +16,6 @@
  */
 package org.apache.kafka.tools.reassign;
 
-import org.apache.kafka.admin.BrokerMetadata;
 import org.apache.kafka.clients.admin.Config;
 import org.apache.kafka.clients.admin.MockAdminClient;
 import org.apache.kafka.clients.admin.PartitionReassignment;
@@ -29,9 +28,10 @@ import org.apache.kafka.common.errors.InvalidReplicationFactorException;
 import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.common.utils.Exit;
 import org.apache.kafka.common.utils.Time;
-import org.apache.kafka.server.common.AdminCommandFailedException;
-import org.apache.kafka.server.common.AdminOperationException;
+import org.apache.kafka.metadata.placement.UsableBroker;
 import org.apache.kafka.server.config.QuotaConfig;
+import org.apache.kafka.tools.AdminCommandFailedException;
+import org.apache.kafka.tools.AdminOperationException;
 
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
@@ -40,18 +40,18 @@ import org.junit.jupiter.api.Timeout;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.Arrays.asList;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.alterPartitionReassignments;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.alterReplicaLogDirs;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.calculateFollowerThrottles;
@@ -71,6 +71,7 @@ import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.generate
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.getBrokerMetadata;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.getReplicaAssignmentForPartitions;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.getReplicaAssignmentForTopics;
+import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.getReplicaToLogDir;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.modifyInterBrokerThrottle;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.modifyLogDirThrottle;
 import static org.apache.kafka.tools.reassign.ReassignPartitionsCommand.modifyTopicThrottles;
@@ -120,11 +121,11 @@ public class ReassignPartitionsUnitTest {
         Map<TopicPartition, PartitionReassignmentState> states = new HashMap<>();
 
         states.put(new TopicPartition("foo", 0),
-            new PartitionReassignmentState(asList(1, 2, 3), asList(1, 2, 3), true));
+            new PartitionReassignmentState(List.of(1, 2, 3), List.of(1, 2, 3), true));
         states.put(new TopicPartition("foo", 1),
-            new PartitionReassignmentState(asList(1, 2, 3), asList(1, 2, 4), false));
+            new PartitionReassignmentState(List.of(1, 2, 3), List.of(1, 2, 4), false));
         states.put(new TopicPartition("bar", 0),
-            new PartitionReassignmentState(asList(1, 2, 3), asList(1, 2, 4), false));
+            new PartitionReassignmentState(List.of(1, 2, 3), List.of(1, 2, 4), false));
 
         assertEquals(String.join(System.lineSeparator(),
             "Status of partition reassignment:",
@@ -136,19 +137,19 @@ public class ReassignPartitionsUnitTest {
 
     private void addTopics(MockAdminClient adminClient) {
         List<Node> b = adminClient.brokers();
-        adminClient.addTopic(false, "foo", asList(
+        adminClient.addTopic(false, "foo", List.of(
             new TopicPartitionInfo(0, b.get(0),
-                asList(b.get(0), b.get(1), b.get(2)),
-                asList(b.get(0), b.get(1))),
+                List.of(b.get(0), b.get(1), b.get(2)),
+                List.of(b.get(0), b.get(1))),
             new TopicPartitionInfo(1, b.get(1),
-                asList(b.get(1), b.get(2), b.get(3)),
-                asList(b.get(1), b.get(2), b.get(3)))
-        ), Collections.emptyMap());
-        adminClient.addTopic(false, "bar", asList(
+                List.of(b.get(1), b.get(2), b.get(3)),
+                List.of(b.get(1), b.get(2), b.get(3)))
+        ), Map.of());
+        adminClient.addTopic(false, "bar", List.of(
             new TopicPartitionInfo(0, b.get(2),
-                asList(b.get(2), b.get(3), b.get(0)),
-                asList(b.get(2), b.get(3), b.get(0)))
-        ), Collections.emptyMap());
+                List.of(b.get(2), b.get(3), b.get(0)),
+                List.of(b.get(2), b.get(3), b.get(0)))
+        ), Map.of());
     }
 
     @Test
@@ -158,10 +159,10 @@ public class ReassignPartitionsUnitTest {
             // Create a reassignment and test findPartitionReassignmentStates.
             Map<TopicPartition, List<Integer>> reassignments = new HashMap<>();
 
-            reassignments.put(new TopicPartition("foo", 0), asList(0, 1, 3));
-            reassignments.put(new TopicPartition("quux", 0), asList(1, 2, 3));
+            reassignments.put(new TopicPartition("foo", 0), List.of(0, 1, 3));
+            reassignments.put(new TopicPartition("quux", 0), List.of(1, 2, 3));
 
-            Map<TopicPartition, Throwable> reassignmentResult = alterPartitionReassignments(adminClient, reassignments);
+            Map<TopicPartition, Throwable> reassignmentResult = alterPartitionReassignments(adminClient, reassignments,  false);
 
             assertEquals(1, reassignmentResult.size());
             assertEquals(UnknownTopicOrPartitionException.class, reassignmentResult.get(new TopicPartition("quux", 0)).getClass());
@@ -169,14 +170,14 @@ public class ReassignPartitionsUnitTest {
             Map<TopicPartition, PartitionReassignmentState> expStates = new HashMap<>();
 
             expStates.put(new TopicPartition("foo", 0),
-                new PartitionReassignmentState(asList(0, 1, 2), asList(0, 1, 3), false));
+                new PartitionReassignmentState(List.of(0, 1, 2), List.of(0, 1, 3), false));
             expStates.put(new TopicPartition("foo", 1),
-                new PartitionReassignmentState(asList(1, 2, 3), asList(1, 2, 3), true));
+                new PartitionReassignmentState(List.of(1, 2, 3), List.of(1, 2, 3), true));
 
             Entry<Map<TopicPartition, PartitionReassignmentState>, Boolean> actual =
-                findPartitionReassignmentStates(adminClient, asList(
-                    new SimpleImmutableEntry<>(new TopicPartition("foo", 0), asList(0, 1, 3)),
-                    new SimpleImmutableEntry<>(new TopicPartition("foo", 1), asList(1, 2, 3))
+                findPartitionReassignmentStates(adminClient, List.of(
+                    new SimpleImmutableEntry<>(new TopicPartition("foo", 0), List.of(0, 1, 3)),
+                    new SimpleImmutableEntry<>(new TopicPartition("foo", 1), List.of(1, 2, 3))
                 ));
 
             assertEquals(expStates, actual.getKey());
@@ -184,7 +185,7 @@ public class ReassignPartitionsUnitTest {
 
             // Cancel the reassignment and test findPartitionReassignmentStates again.
             Map<TopicPartition, Throwable> cancelResult = cancelPartitionReassignments(adminClient,
-                new HashSet<>(asList(new TopicPartition("foo", 0), new TopicPartition("quux", 2))));
+                Set.of(new TopicPartition("foo", 0), new TopicPartition("quux", 2)));
 
             assertEquals(1, cancelResult.size());
             assertEquals(UnknownTopicOrPartitionException.class, cancelResult.get(new TopicPartition("quux", 2)).getClass());
@@ -192,13 +193,13 @@ public class ReassignPartitionsUnitTest {
             expStates.clear();
 
             expStates.put(new TopicPartition("foo", 0),
-                new PartitionReassignmentState(asList(0, 1, 2), asList(0, 1, 3), true));
+                new PartitionReassignmentState(List.of(0, 1, 2), List.of(0, 1, 3), true));
             expStates.put(new TopicPartition("foo", 1),
-                new PartitionReassignmentState(asList(1, 2, 3), asList(1, 2, 3), true));
+                new PartitionReassignmentState(List.of(1, 2, 3), List.of(1, 2, 3), true));
 
-            actual = findPartitionReassignmentStates(adminClient, asList(
-                new SimpleImmutableEntry<>(new TopicPartition("foo", 0), asList(0, 1, 3)),
-                new SimpleImmutableEntry<>(new TopicPartition("foo", 1), asList(1, 2, 3))
+            actual = findPartitionReassignmentStates(adminClient, List.of(
+                new SimpleImmutableEntry<>(new TopicPartition("foo", 0), List.of(0, 1, 3)),
+                new SimpleImmutableEntry<>(new TopicPartition("foo", 1), List.of(1, 2, 3))
             ));
 
             assertEquals(expStates, actual.getKey());
@@ -210,20 +211,20 @@ public class ReassignPartitionsUnitTest {
     public void testFindLogDirMoveStates() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().
                 numBrokers(4).
-                brokerLogDirs(asList(
-                    asList("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
-                    asList("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
-                    asList("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
-                    asList("/tmp/kafka-logs0", null)))
+                brokerLogDirs(List.of(
+                    List.of("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
+                    List.of("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
+                    List.of("/tmp/kafka-logs0", "/tmp/kafka-logs1"),
+                    Arrays.asList("/tmp/kafka-logs0", null)))
                 .build()) {
 
             addTopics(adminClient);
             List<Node> b = adminClient.brokers();
-            adminClient.addTopic(false, "quux", asList(
+            adminClient.addTopic(false, "quux", List.of(
                     new TopicPartitionInfo(0, b.get(2),
-                        asList(b.get(1), b.get(2), b.get(3)),
-                        asList(b.get(1), b.get(2), b.get(3)))),
-                Collections.emptyMap());
+                        List.of(b.get(1), b.get(2), b.get(3)),
+                        List.of(b.get(1), b.get(2), b.get(3)))),
+                Map.of());
 
             Map<TopicPartitionReplica, String> replicaAssignment = new HashMap<>();
 
@@ -286,24 +287,24 @@ public class ReassignPartitionsUnitTest {
 
             Map<TopicPartition, List<Integer>> assignments = new HashMap<>();
 
-            assignments.put(new TopicPartition("foo", 0), asList(0, 1, 2));
-            assignments.put(new TopicPartition("foo", 1), asList(1, 2, 3));
+            assignments.put(new TopicPartition("foo", 0), List.of(0, 1, 2));
+            assignments.put(new TopicPartition("foo", 1), List.of(1, 2, 3));
 
-            assertEquals(assignments, getReplicaAssignmentForTopics(adminClient, asList("foo")));
+            assertEquals(assignments, getReplicaAssignmentForTopics(adminClient, List.of("foo")));
 
             assignments.clear();
 
-            assignments.put(new TopicPartition("foo", 0), asList(0, 1, 2));
-            assignments.put(new TopicPartition("bar", 0), asList(2, 3, 0));
+            assignments.put(new TopicPartition("foo", 0), List.of(0, 1, 2));
+            assignments.put(new TopicPartition("bar", 0), List.of(2, 3, 0));
 
             assertEquals(assignments,
-                getReplicaAssignmentForPartitions(adminClient, new HashSet<>(asList(new TopicPartition("foo", 0), new TopicPartition("bar", 0)))));
+                getReplicaAssignmentForPartitions(adminClient, Set.of(new TopicPartition("foo", 0), new TopicPartition("bar", 0))));
 
             UnknownTopicOrPartitionException exception =
                 assertInstanceOf(UnknownTopicOrPartitionException.class,
                     assertThrows(ExecutionException.class,
                         () -> getReplicaAssignmentForPartitions(adminClient,
-                            new HashSet<>(asList(new TopicPartition("foo", 0), new TopicPartition("foo", 10))))).getCause());
+                            Set.of(new TopicPartition("foo", 0), new TopicPartition("foo", 10)))).getCause());
             assertEquals("Unable to find partition: foo-10", exception.getMessage());
         }
     }
@@ -311,26 +312,26 @@ public class ReassignPartitionsUnitTest {
     @Test
     public void testGetBrokerRackInformation() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().
-            brokers(asList(new Node(0, "localhost", 9092, "rack0"),
+            brokers(List.of(new Node(0, "localhost", 9092, "rack0"),
                 new Node(1, "localhost", 9093, "rack1"),
                 new Node(2, "localhost", 9094, null))).
             build()) {
 
-            assertEquals(asList(
-                new BrokerMetadata(0, Optional.of("rack0")),
-                new BrokerMetadata(1, Optional.of("rack1"))
-            ), getBrokerMetadata(adminClient, asList(0, 1), true));
-            assertEquals(asList(
-                new BrokerMetadata(0, Optional.empty()),
-                new BrokerMetadata(1, Optional.empty())
-            ), getBrokerMetadata(adminClient, asList(0, 1), false));
+            assertEquals(List.of(
+                new UsableBroker(0, Optional.of("rack0"), false),
+                new UsableBroker(1, Optional.of("rack1"), false)
+            ), getBrokerMetadata(adminClient, List.of(0, 1), true));
+            assertEquals(List.of(
+                new UsableBroker(0, Optional.empty(), false),
+                new UsableBroker(1, Optional.empty(), false)
+            ), getBrokerMetadata(adminClient, List.of(0, 1), false));
             assertStartsWith("Not all brokers have rack information",
                 assertThrows(AdminOperationException.class,
-                    () -> getBrokerMetadata(adminClient, asList(1, 2), true)).getMessage());
-            assertEquals(asList(
-                new BrokerMetadata(1, Optional.empty()),
-                new BrokerMetadata(2, Optional.empty())
-            ), getBrokerMetadata(adminClient, asList(1, 2), false));
+                    () -> getBrokerMetadata(adminClient, List.of(1, 2), true)).getMessage());
+            assertEquals(List.of(
+                new UsableBroker(1, Optional.empty(), false),
+                new UsableBroker(2, Optional.empty(), false)
+            ), getBrokerMetadata(adminClient, List.of(1, 2), false));
         }
     }
 
@@ -344,13 +345,13 @@ public class ReassignPartitionsUnitTest {
             assertThrows(AdminCommandFailedException.class, () -> parseGenerateAssignmentArgs(
                 "{\"topics\": [{\"topic\": \"foo\"}], \"version\":1}", "5,2,3,4,5"),
                 "Expected to detect duplicate broker list entries").getMessage());
-        assertEquals(new SimpleImmutableEntry<>(asList(5, 2, 3, 4), asList("foo")),
+        assertEquals(new SimpleImmutableEntry<>(List.of(5, 2, 3, 4), List.of("foo")),
             parseGenerateAssignmentArgs("{\"topics\": [{\"topic\": \"foo\"}], \"version\":1}", "5,2,3,4"));
         assertStartsWith("List of topics to reassign contains duplicate entries",
             assertThrows(AdminCommandFailedException.class, () -> parseGenerateAssignmentArgs(
                 "{\"topics\": [{\"topic\": \"foo\"},{\"topic\": \"foo\"}], \"version\":1}", "5,2,3,4"),
                 "Expected to detect duplicate topic entries").getMessage());
-        assertEquals(new SimpleImmutableEntry<>(asList(5, 3, 4), asList("foo", "bar")),
+        assertEquals(new SimpleImmutableEntry<>(List.of(5, 3, 4), List.of("foo", "bar")),
             parseGenerateAssignmentArgs(
                 "{\"topics\": [{\"topic\": \"foo\"},{\"topic\": \"bar\"}], \"version\":1}", "5,3,4"));
     }
@@ -359,7 +360,7 @@ public class ReassignPartitionsUnitTest {
     public void testGenerateAssignmentFailsWithoutEnoughReplicas() {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().numBrokers(4).build()) {
             addTopics(adminClient);
-            assertStartsWith("Replication factor: 3 larger than available brokers: 2",
+            assertStartsWith("The target replication factor of 3 cannot be reached because only 2 broker(s) are registered",
                 assertThrows(InvalidReplicationFactorException.class,
                     () -> generateAssignment(adminClient, "{\"topics\":[{\"topic\":\"foo\"},{\"topic\":\"bar\"}]}", "0,1", false),
                     "Expected generateAssignment to fail").getMessage());
@@ -380,7 +381,7 @@ public class ReassignPartitionsUnitTest {
     @Test
     public void testGenerateAssignmentWithInconsistentRacks() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().
-            brokers(asList(
+            brokers(List.of(
                 new Node(0, "localhost", 9092, "rack0"),
                 new Node(1, "localhost", 9093, "rack0"),
                 new Node(2, "localhost", 9094, null),
@@ -400,8 +401,8 @@ public class ReassignPartitionsUnitTest {
 
             Map<TopicPartition, List<Integer>> expCurrent = new HashMap<>();
 
-            expCurrent.put(new TopicPartition("foo", 0), asList(0, 1, 2));
-            expCurrent.put(new TopicPartition("foo", 1), asList(1, 2, 3));
+            expCurrent.put(new TopicPartition("foo", 0), List.of(0, 1, 2));
+            expCurrent.put(new TopicPartition("foo", 1), List.of(1, 2, 3));
 
             assertEquals(expCurrent, proposedCurrent.getValue());
         }
@@ -411,7 +412,7 @@ public class ReassignPartitionsUnitTest {
     public void testGenerateAssignmentWithFewerBrokers() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().numBrokers(4).build()) {
             addTopics(adminClient);
-            List<Integer> goalBrokers = asList(0, 1, 3);
+            List<Integer> goalBrokers = List.of(0, 1, 3);
 
             Entry<Map<TopicPartition, List<Integer>>, Map<TopicPartition, List<Integer>>>
                 proposedCurrent = generateAssignment(adminClient,
@@ -420,9 +421,9 @@ public class ReassignPartitionsUnitTest {
 
             Map<TopicPartition, List<Integer>> expCurrent = new HashMap<>();
 
-            expCurrent.put(new TopicPartition("foo", 0), asList(0, 1, 2));
-            expCurrent.put(new TopicPartition("foo", 1), asList(1, 2, 3));
-            expCurrent.put(new TopicPartition("bar", 0), asList(2, 3, 0));
+            expCurrent.put(new TopicPartition("foo", 0), List.of(0, 1, 2));
+            expCurrent.put(new TopicPartition("foo", 1), List.of(1, 2, 3));
+            expCurrent.put(new TopicPartition("bar", 0), List.of(2, 3, 0));
 
             assertEquals(expCurrent, proposedCurrent.getValue());
 
@@ -436,29 +437,50 @@ public class ReassignPartitionsUnitTest {
 
     @Test
     public void testCurrentPartitionReplicaAssignmentToString() throws Exception {
-        Map<TopicPartition, List<Integer>> proposedParts = new HashMap<>();
+        try (MockAdminClient adminClient = new MockAdminClient.Builder()
+                .numBrokers(6)
+                .brokerLogDirs(List.of(
+                    List.of("/tmp/broker0/logs"),
+                    List.of("/tmp/broker1/logs"),
+                    List.of("/tmp/broker2/logs"),
+                    List.of("/tmp/broker3/logs"),
+                    List.of("/tmp/broker4/logs"),
+                    List.of("/tmp/broker5/logs")
+                ))
+                .build()
+        ) {
 
-        proposedParts.put(new TopicPartition("foo", 1), asList(1, 2, 3));
-        proposedParts.put(new TopicPartition("bar", 0), asList(7, 8, 9));
+            List<Node> brokers = adminClient.brokers();
+            adminClient.addTopic(false, "foo", List.of(
+                new TopicPartitionInfo(1, brokers.get(1),
+                    List.of(brokers.get(1), brokers.get(2), brokers.get(3)),
+                    List.of(brokers.get(1), brokers.get(2), brokers.get(3)))
+            ), Map.of());
 
-        Map<TopicPartition, List<Integer>> currentParts = new HashMap<>();
+            adminClient.addTopic(false, "bar", List.of(
+                new TopicPartitionInfo(0, brokers.get(4),
+                    List.of(brokers.get(4), brokers.get(5)),
+                    List.of(brokers.get(4), brokers.get(5)))
+            ), Map.of());
 
-        currentParts.put(new TopicPartition("foo", 0), asList(1, 2, 3));
-        currentParts.put(new TopicPartition("foo", 1), asList(4, 5, 6));
-        currentParts.put(new TopicPartition("bar", 0), asList(7, 8));
-        currentParts.put(new TopicPartition("baz", 0), asList(10, 11, 12));
+            Map<TopicPartition, List<Integer>> proposedParts = new HashMap<>();
+            proposedParts.put(new TopicPartition("foo", 1), List.of(0, 1, 2));
+            proposedParts.put(new TopicPartition("bar", 0), List.of(3, 4, 5));
 
-        assertEquals(String.join(System.lineSeparator(),
-            "Current partition replica assignment",
-            "",
-            "{\"version\":1,\"partitions\":" +
-                "[{\"topic\":\"bar\",\"partition\":0,\"replicas\":[7,8],\"log_dirs\":[\"any\",\"any\"]}," +
-                "{\"topic\":\"foo\",\"partition\":1,\"replicas\":[4,5,6],\"log_dirs\":[\"any\",\"any\",\"any\"]}]" +
-                "}",
-            "",
-            "Save this to use as the --reassignment-json-file option during rollback"),
-            currentPartitionReplicaAssignmentToString(proposedParts, currentParts)
-        );
+            Map<TopicPartition, List<Integer>> currentParts = new HashMap<>();
+            currentParts.put(new TopicPartition("foo", 1), List.of(1, 2, 3));
+            currentParts.put(new TopicPartition("bar", 0), List.of(4, 5));
+
+            assertEquals(String.join(System.lineSeparator(),
+                "Current partition replica assignment",
+                "",
+                "{\"version\":1,\"partitions\":[{\"topic\":\"bar\",\"partition\":0,\"replicas\":[4,5],\"log_dirs\":[\"/tmp/broker4/logs\",\"/tmp/broker4/logs\"]}," +
+                    "{\"topic\":\"foo\",\"partition\":1,\"replicas\":[1,2,3],\"log_dirs\":[\"any\",\"any\",\"any\"]}]}",
+                "",
+                "Save this to use as the --reassignment-json-file option during rollback"),
+                currentPartitionReplicaAssignmentToString(adminClient, proposedParts, currentParts)
+            );
+        }
     }
 
     @Test
@@ -473,52 +495,52 @@ public class ReassignPartitionsUnitTest {
         Map<TopicPartition, PartitionReassignment> currentReassignments = new HashMap<>();
 
         currentReassignments.put(new TopicPartition("foo", 0), new PartitionReassignment(
-            asList(1, 2, 3, 4), asList(4), asList(3)));
+            List.of(1, 2, 3, 4), List.of(4), List.of(3)));
         currentReassignments.put(new TopicPartition("foo", 1), new PartitionReassignment(
-            asList(4, 5, 6, 7, 8), asList(7, 8), asList(4, 5)));
+            List.of(4, 5, 6, 7, 8), List.of(7, 8), List.of(4, 5)));
         currentReassignments.put(new TopicPartition("foo", 2), new PartitionReassignment(
-            asList(1, 2, 3, 4), asList(3, 4), asList(1, 2)));
+            List.of(1, 2, 3, 4), List.of(3, 4), List.of(1, 2)));
         currentReassignments.put(new TopicPartition("foo", 3), new PartitionReassignment(
-            asList(1, 2, 3, 4), asList(3, 4), asList(1, 2)));
+            List.of(1, 2, 3, 4), List.of(3, 4), List.of(1, 2)));
         currentReassignments.put(new TopicPartition("foo", 4), new PartitionReassignment(
-            asList(1, 2, 3, 4), asList(3, 4), asList(1, 2)));
+            List.of(1, 2, 3, 4), List.of(3, 4), List.of(1, 2)));
         currentReassignments.put(new TopicPartition("foo", 5), new PartitionReassignment(
-            asList(1, 2, 3, 4), asList(3, 4), asList(1, 2)));
+            List.of(1, 2, 3, 4), List.of(3, 4), List.of(1, 2)));
 
         Map<TopicPartition, List<Integer>> proposedParts = new HashMap<>();
 
-        proposedParts.put(new TopicPartition("foo", 0), asList(1, 2, 5));
-        proposedParts.put(new TopicPartition("foo", 2), asList(3, 4));
-        proposedParts.put(new TopicPartition("foo", 3), asList(5, 6));
-        proposedParts.put(new TopicPartition("foo", 4), asList(3));
-        proposedParts.put(new TopicPartition("foo", 5), asList(3, 4, 5, 6));
-        proposedParts.put(new TopicPartition("bar", 0), asList(1, 2, 3));
+        proposedParts.put(new TopicPartition("foo", 0), List.of(1, 2, 5));
+        proposedParts.put(new TopicPartition("foo", 2), List.of(3, 4));
+        proposedParts.put(new TopicPartition("foo", 3), List.of(5, 6));
+        proposedParts.put(new TopicPartition("foo", 4), List.of(3));
+        proposedParts.put(new TopicPartition("foo", 5), List.of(3, 4, 5, 6));
+        proposedParts.put(new TopicPartition("bar", 0), List.of(1, 2, 3));
 
         Map<TopicPartition, List<Integer>> currentParts = new HashMap<>();
 
-        currentParts.put(new TopicPartition("foo", 0), asList(1, 2, 3, 4));
-        currentParts.put(new TopicPartition("foo", 1), asList(4, 5, 6, 7, 8));
-        currentParts.put(new TopicPartition("foo", 2), asList(1, 2, 3, 4));
-        currentParts.put(new TopicPartition("foo", 3), asList(1, 2, 3, 4));
-        currentParts.put(new TopicPartition("foo", 4), asList(1, 2, 3, 4));
-        currentParts.put(new TopicPartition("foo", 5), asList(1, 2, 3, 4));
-        currentParts.put(new TopicPartition("bar", 0), asList(2, 3, 4));
-        currentParts.put(new TopicPartition("baz", 0), asList(1, 2, 3));
+        currentParts.put(new TopicPartition("foo", 0), List.of(1, 2, 3, 4));
+        currentParts.put(new TopicPartition("foo", 1), List.of(4, 5, 6, 7, 8));
+        currentParts.put(new TopicPartition("foo", 2), List.of(1, 2, 3, 4));
+        currentParts.put(new TopicPartition("foo", 3), List.of(1, 2, 3, 4));
+        currentParts.put(new TopicPartition("foo", 4), List.of(1, 2, 3, 4));
+        currentParts.put(new TopicPartition("foo", 5), List.of(1, 2, 3, 4));
+        currentParts.put(new TopicPartition("bar", 0), List.of(2, 3, 4));
+        currentParts.put(new TopicPartition("baz", 0), List.of(1, 2, 3));
 
         Map<String, Map<Integer, PartitionMove>> moveMap = calculateProposedMoveMap(currentReassignments, proposedParts, currentParts);
 
         Map<Integer, PartitionMove> fooMoves = new HashMap<>();
 
-        fooMoves.put(0, new PartitionMove(new HashSet<>(asList(1, 2, 3)), new HashSet<>(asList(5))));
-        fooMoves.put(1, new PartitionMove(new HashSet<>(asList(4, 5, 6)), new HashSet<>(asList(7, 8))));
-        fooMoves.put(2, new PartitionMove(new HashSet<>(asList(1, 2)), new HashSet<>(asList(3, 4))));
-        fooMoves.put(3, new PartitionMove(new HashSet<>(asList(1, 2)), new HashSet<>(asList(5, 6))));
-        fooMoves.put(4, new PartitionMove(new HashSet<>(asList(1, 2)), new HashSet<>(asList(3))));
-        fooMoves.put(5, new PartitionMove(new HashSet<>(asList(1, 2)), new HashSet<>(asList(3, 4, 5, 6))));
+        fooMoves.put(0, new PartitionMove(Set.of(1, 2, 3), Set.of(5)));
+        fooMoves.put(1, new PartitionMove(Set.of(4, 5, 6), Set.of(7, 8)));
+        fooMoves.put(2, new PartitionMove(Set.of(1, 2), Set.of(3, 4)));
+        fooMoves.put(3, new PartitionMove(Set.of(1, 2), Set.of(5, 6)));
+        fooMoves.put(4, new PartitionMove(Set.of(1, 2), Set.of(3)));
+        fooMoves.put(5, new PartitionMove(Set.of(1, 2), Set.of(3, 4, 5, 6)));
 
         Map<Integer, PartitionMove> barMoves = new HashMap<>();
 
-        barMoves.put(0, new PartitionMove(new HashSet<>(asList(2, 3, 4)), new HashSet<>(asList(1))));
+        barMoves.put(0, new PartitionMove(Set.of(2, 3, 4), Set.of(1)));
 
         assertEquals(fooMoves, moveMap.get("foo"));
         assertEquals(barMoves, moveMap.get("bar"));
@@ -537,10 +559,10 @@ public class ReassignPartitionsUnitTest {
 
         assertEquals(expFollowerThrottle, calculateFollowerThrottles(moveMap));
 
-        assertEquals(new HashSet<>(asList(1, 2, 3, 4, 5, 6, 7, 8)), calculateReassigningBrokers(moveMap));
-        assertEquals(new HashSet<>(asList(0, 2)), calculateMovingBrokers(new HashSet<>(asList(
+        assertEquals(Set.of(1, 2, 3, 4, 5, 6, 7, 8), calculateReassigningBrokers(moveMap));
+        assertEquals(Set.of(0, 2), calculateMovingBrokers(Set.of(
             new TopicPartitionReplica("quux", 0, 0),
-            new TopicPartitionReplica("quux", 1, 2)))));
+            new TopicPartitionReplica("quux", 1, 2))));
     }
 
     @Test
@@ -570,8 +592,8 @@ public class ReassignPartitionsUnitTest {
 
         Map<TopicPartition, List<Integer>> partitionsToBeReassigned = new HashMap<>();
 
-        partitionsToBeReassigned.put(new TopicPartition("foo", 0), asList(1, 2, 3));
-        partitionsToBeReassigned.put(new TopicPartition("foo", 1), asList(3, 4, 5));
+        partitionsToBeReassigned.put(new TopicPartition("foo", 0), List.of(1, 2, 3));
+        partitionsToBeReassigned.put(new TopicPartition("foo", 1), List.of(3, 4, 5));
 
         Entry<Map<TopicPartition, List<Integer>>, Map<TopicPartitionReplica, String>> actual = parseExecuteAssignmentArgs(
             "{\"version\":1,\"partitions\":" +
@@ -593,7 +615,7 @@ public class ReassignPartitionsUnitTest {
                 "[{\"topic\":\"foo\",\"partition\":0,\"replicas\":[1,2,3],\"log_dirs\":[\"/tmp/a\",\"/tmp/b\",\"/tmp/c\"]}" +
                 "]}");
 
-        assertEquals(Collections.singletonMap(new TopicPartition("foo", 0), asList(1, 2, 3)), actual.getKey());
+        assertEquals(Map.of(new TopicPartition("foo", 0), List.of(1, 2, 3)), actual.getKey());
         assertEquals(replicaAssignment, actual.getValue());
     }
 
@@ -606,7 +628,7 @@ public class ReassignPartitionsUnitTest {
                     "{\"version\":1,\"partitions\":" +
                         "[{\"topic\":\"foo\",\"partition\":0,\"replicas\":[0,1],\"log_dirs\":[\"any\",\"any\"]}," +
                         "{\"topic\":\"quux\",\"partition\":0,\"replicas\":[2,3,4],\"log_dirs\":[\"any\",\"any\",\"any\"]}" +
-                        "]}", -1L, -1L, 10000L, Time.SYSTEM), "Expected reassignment with non-existent topic to fail").getCause().getMessage());
+                        "]}", -1L, -1L, 10000L, Time.SYSTEM, false), "Expected reassignment with non-existent topic to fail").getCause().getMessage());
         }
     }
 
@@ -619,15 +641,15 @@ public class ReassignPartitionsUnitTest {
                     "{\"version\":1,\"partitions\":" +
                         "[{\"topic\":\"foo\",\"partition\":0,\"replicas\":[0,1],\"log_dirs\":[\"any\",\"any\"]}," +
                         "{\"topic\":\"foo\",\"partition\":1,\"replicas\":[2,3,4],\"log_dirs\":[\"any\",\"any\",\"any\"]}" +
-                        "]}", -1L, -1L, 10000L, Time.SYSTEM), "Expected reassignment with non-existent broker id to fail").getMessage());
+                        "]}", -1L, -1L, 10000L, Time.SYSTEM, false), "Expected reassignment with non-existent broker id to fail").getMessage());
         }
     }
 
     @Test
     public void testModifyBrokerInterBrokerThrottle() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().numBrokers(4).build()) {
-            modifyInterBrokerThrottle(adminClient, new HashSet<>(asList(0, 1, 2)), 1000);
-            modifyInterBrokerThrottle(adminClient, new HashSet<>(asList(0, 3)), 100);
+            modifyInterBrokerThrottle(adminClient, Set.of(0, 1, 2), 1000);
+            modifyInterBrokerThrottle(adminClient, Set.of(0, 3), 100);
             List<ConfigResource> brokers = new ArrayList<>();
             for (int i = 0; i < 4; i++)
                 brokers.add(new ConfigResource(ConfigResource.Type.BROKER, Integer.toString(i)));
@@ -642,8 +664,8 @@ public class ReassignPartitionsUnitTest {
     @Test
     public void testModifyLogDirThrottle() throws Exception {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().numBrokers(4).build()) {
-            modifyLogDirThrottle(adminClient, new HashSet<>(asList(0, 1, 2)), 2000);
-            modifyLogDirThrottle(adminClient, new HashSet<>(asList(0, 3)), -1);
+            modifyLogDirThrottle(adminClient, Set.of(0, 1, 2), 2000);
+            modifyLogDirThrottle(adminClient, Set.of(0, 3), -1);
 
             List<ConfigResource> brokers = new ArrayList<>();
             for (int i = 0; i < 4; i++)
@@ -666,11 +688,11 @@ public class ReassignPartitionsUnitTest {
 
             Map<TopicPartition, List<Integer>> reassignments = new HashMap<>();
 
-            reassignments.put(new TopicPartition("foo", 1), asList(4, 5, 3));
-            reassignments.put(new TopicPartition("foo", 0), asList(0, 1, 4, 2));
-            reassignments.put(new TopicPartition("bar", 0), asList(2, 3));
+            reassignments.put(new TopicPartition("foo", 1), List.of(4, 5, 3));
+            reassignments.put(new TopicPartition("foo", 0), List.of(0, 1, 4, 2));
+            reassignments.put(new TopicPartition("bar", 0), List.of(2, 3));
 
-            Map<TopicPartition, Throwable> reassignmentResult = alterPartitionReassignments(adminClient, reassignments);
+            Map<TopicPartition, Throwable> reassignmentResult = alterPartitionReassignments(adminClient, reassignments, false);
 
             assertTrue(reassignmentResult.isEmpty());
             assertEquals(String.join(System.lineSeparator(),
@@ -711,9 +733,9 @@ public class ReassignPartitionsUnitTest {
 
             modifyTopicThrottles(adminClient,
                 leaderThrottles,
-                Collections.singletonMap("bar", "followerBar"));
+                Map.of("bar", "followerBar"));
             List<ConfigResource> topics = Stream.of("bar", "foo").map(
-                id -> new ConfigResource(ConfigResource.Type.TOPIC, id)).collect(Collectors.toList());
+                id -> new ConfigResource(ConfigResource.Type.TOPIC, id)).toList();
             Map<ConfigResource, Config> results = adminClient.describeConfigs(topics).all().get();
             verifyTopicThrottleResults(results.get(topics.get(0)), "leaderBar", "followerBar");
             verifyTopicThrottleResults(results.get(topics.get(1)), "leaderFoo", "");
@@ -736,7 +758,7 @@ public class ReassignPartitionsUnitTest {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().
             numBrokers(4).
             brokerLogDirs(Collections.nCopies(4,
-                asList("/tmp/kafka-logs0", "/tmp/kafka-logs1"))).
+                List.of("/tmp/kafka-logs0", "/tmp/kafka-logs1"))).
             build()) {
 
             addTopics(adminClient);
@@ -747,7 +769,7 @@ public class ReassignPartitionsUnitTest {
             assignment.put(new TopicPartitionReplica("quux", 1, 0), "/tmp/kafka-logs1");
 
             assertEquals(
-                new HashSet<>(asList(new TopicPartitionReplica("foo", 0, 0))),
+                Set.of(new TopicPartitionReplica("foo", 0, 0)),
                 alterReplicaLogDirs(adminClient, assignment)
             );
         }
@@ -762,7 +784,41 @@ public class ReassignPartitionsUnitTest {
         try (MockAdminClient adminClient = new MockAdminClient.Builder().numBrokers(4).build()) {
             addTopics(adminClient);
             assertStartsWith("Unexpected character",
-                assertThrows(AdminOperationException.class, () -> executeAssignment(adminClient, false, "{invalid_json", -1L, -1L, 10000L, Time.SYSTEM)).getMessage());
+                assertThrows(AdminOperationException.class, () -> executeAssignment(adminClient, false, "{invalid_json", -1L, -1L, 10000L, Time.SYSTEM, false)).getMessage());
+        }
+    }
+
+    @Test
+    public void testGetReplicaToLogDir() throws Exception {
+        try (MockAdminClient adminClient = new MockAdminClient.Builder()
+                .numBrokers(4)
+                .brokerLogDirs(List.of(
+                    List.of("/tmp/broker0/logs0"),
+                    List.of("/tmp/broker1/logs0"),
+                    List.of("/tmp/broker2/logs0"),
+                    List.of("/tmp/broker3/logs0")
+                )).build()
+        ) {
+            addTopics(adminClient);
+
+            Map<TopicPartition, List<Integer>> topicPartitionToReplicas = Map.of(
+                new TopicPartition("foo", 0), List.of(0, 1, 2),
+                new TopicPartition("foo", 1), List.of(1, 2, 3),
+                new TopicPartition("bar", 0), List.of(2, 3, 0)
+            );
+
+            Map<TopicPartitionReplica, String> result = getReplicaToLogDir(adminClient, topicPartitionToReplicas);
+
+            assertFalse(result.isEmpty());
+            assertEquals("/tmp/broker0/logs0", result.get(new TopicPartitionReplica("foo", 0, 0)));
+            assertEquals("/tmp/broker0/logs0", result.get(new TopicPartitionReplica("foo", 0, 1)));
+            assertEquals("/tmp/broker0/logs0", result.get(new TopicPartitionReplica("foo", 0, 2)));
+            assertEquals("/tmp/broker1/logs0", result.get(new TopicPartitionReplica("foo", 1, 1)));
+            assertEquals("/tmp/broker1/logs0", result.get(new TopicPartitionReplica("foo", 1, 2)));
+            assertEquals("/tmp/broker1/logs0", result.get(new TopicPartitionReplica("foo", 1, 3)));
+            assertEquals("/tmp/broker2/logs0", result.get(new TopicPartitionReplica("bar", 0, 0)));
+            assertEquals("/tmp/broker2/logs0", result.get(new TopicPartitionReplica("bar", 0, 2)));
+            assertEquals("/tmp/broker2/logs0", result.get(new TopicPartitionReplica("bar", 0, 3)));
         }
     }
 }
